*Empty MediaWiki Message*

--- a/فرانز_کافکا.mw
+++ b/فرانز_کافکا.mw
@@ -1,5 +1,3 @@
-فرانز کافکا
-
 فرانز کافکا(franz Kafka) د ۱۸۸۳ زیږېدي کال د جون په درېیمه نېټه  په پراګ کې په یوه جرمني ژبې یهوده کورنۍ کې نړۍ ته سترګې وغړولې. پلار یې یهود سوداګر او مور یې هم یوه متعصبه مېرمن وه، هغه د کورنۍ مشر اولاد وو، دوه کشران وروڼه یې درودل چې دواړه د هغه له شپږکلنۍ وړاندې مړه شول او درې خویندې چې هغوی هم د دوهمې نړیوالې جګړې پر مهال د نازیانو په کېمپونو کې ساه ورکړې. 
 د فرانز پلار غوسه سړی وو او همدې ډار په هغه له وړوکتوبه اغیز کړی چې کابو دهغه په ټول ژوند کې یې نښې لېدل کېږي. کافکا جرمني ژبه د لومړنۍ ژبې په توګه زده کړه، خو په چکي ژبه یې هم روانې خبرې کولې، له فرانسوي کلتور او ژبې سره هم آشنا وو او د خوښې وړ ناول لیکوال یې یو هم ګوستاوفلوبر وو. کافکا په ۱۹۰۱ کال ښونځی پای ته ورساوه او بیا یې په پراګ کې د جارلز یونیورسټي په پوهنتون کې د کیمیا په څانګه کې تحصیل پیل کړ خو دوه اونۍ وروسته یې خپله څانګه له کیمیا حقوقو ته واړوله. د تحصیل پر مهال یې د جرمني ادبیاتو او هنر کلاسونه هم تعقیب کړل. د پوهنتون د لومړي کال په پای کې له ماکس برود(Max Brod)  سره آشنا شوچې هغه او فلیسکس ولش خبریال هم د حقوقو په څانګه کې په زده کړو بوخت وو او د عمر تر پایه یې بیاملګري هم پاتې شول. 
 کافکا په ۱۹۰۶ کال له حقوقو څخه د دکترا په ترلاسه کولو فارغ شو او یو کال یې په ښاري او جنايي محکمه کې د دفتري کارکوونکي په توګه دنده ترسره کړه.  د ۱۹۰۷ کال د نوامبر په لومړۍ نېټه یې د بیمې په یو ایټالیایي شرکت (Assicurazioni Generali) کې کار پیل کړ او کابو یو کال یې هلته کار وکړ، خو دا چې د لیکلو لپاره به یې وخت لږ وو د ۱۹۰۸ کال د جولای په ۱۵ نېټه یې هلته استعفا ورکړه او د پېښو د بیمې په یوه بله موسسه کې یې کار پیل کړ. په خپل کار کې بریالی وو او د ژغورنې خولۍ یې هم په همدې کلونوکې اختراع کړه چې بیا ورته د کارګرانو د مرګ ژوبلې د لږوالي له امله ورته یو مډال هم ورکړی شو. هغه سره لدې چې په دې کارونوکې بوخت وو له خپلو پخوانیو دوستانو سره یې د پراګ درې کسیزه ادبي کړۍ هم ژوندۍ ساتلې وه. 
@@ -9,3 +7,158 @@
 کافکا د شلمې لسیزې په لومړیو کې له میلناینسکا (Milena Jesenska)خبریالې او لیکوالې سره اړیکې پیدا کړل، په ۱۹۲۳ کال یې لیکلو ته د زیات پام په موخه د لنډ مهال لپاره برلین ته سفر وکړ. هلته د یو وړکتون ښونکې دوریادیامانت سره آشنا شو او ژوند یې ورسره پیل کړ. 
 کافکاپه خپل ژوند کې یواځې څو لنډې کیسې خپرې کړې چې د هغه د کارونو ډېره کوچنۍ برخه یې جوړوله، او هیڅ یو ناول یې هم بشپړ نه شو ( پرته له یو ناول چې د ځینو په باور هغه لنډ ناول دی). دهغه لیکنو د هغه د ژوند پر مهال د چا پام جلب نه کړ، او هغه خپل دوست ماکس برود ته ویلي وو چې د هغه له مرګه یې ټولې لیکنې وسوځوي خو هغه یې په دې وصیت عمل ونه کړ او ټولې لیکنې چې له هغه سره وې چاپ کړې، د کافکا وروستۍ معشوقې دوریا دیامانت د هغه ۲۰ کتابچې او ۳۵ لیکونه وساتل او د نورو لپاره یې تقریبا د کافکا په وصیت عمل وکړ. کله چې کافکا له نړۍ سترګې پټې کړې، د هغه لیکنو د کره کتونکو او خلکو نظر وروګرځاوه او آثارو یې ډېر ژر نړیوال شهرت وموند. د یو څو لیکونو پرته چې په چکي ژبه لیکل شوي د هغه ټول آثار په آلماني ژبه دي. د هغه په آثارو کې د قضاوت(Das Urteit 1916)، (ماڼۍ(Das Schloss))، ( د محکومینو  ډله(In der Strafkolonie 919))، (ګرځېدلی)(د کلي ډاکټر(Ein Landarzt 1919))، (امریکا(Amerik 1927))، (ښکاره)، (محاکمه) او یوشمېر نورو ته اشاره کولای شو. 
 عموماً داسې باور موجود دی چې کافکا په خپل ټول ژوند کې له ژورې افسردګۍ او ډېپرېشن سره لاس او ګرېوان وو، بې خوبه، مات زړی او ګڼ شمېر نورې ستونزې یې په ژوند کې وې. کافکا هڅه کوله چې په طبیعي خوراکونو لکه بوټو  طبیعي شیدو او نورو خپل ژوند تېر کړي چې په زیات احتمال دهغه د سېل ناروغۍ لامل شول، بالاخره په دې ناروغۍ اخته شو، بېرته پراګ ته لاړ او د درملنې په موخه ویانا ته ولاړ چې د ۱۹۲۴ کال د جون میاشتې په درېمه نېټه یې همالته له نړۍ سترګې پټې کړې. له هغه ځایه د کافکا مړی بېرته پراګ ته یووړ او د ۱۹۲۴ د جون په یوولسمه نېټه د پراګ په ژیشکوف کې د یهودانو په نوې هدېره کې خاورو ته وسپاره.
+
+[[ar:فرانتس كافكا]]
+[[arz:كافكا]]
+[[ast:Franz Kafka]]
+[[az:Frans Kafka]]
+[[bn:ফ্রান্‌ৎস কাফকা]]
+[[zh-min-nan:Franz Kafka]]
+[[bs:Franz Kafka]]
+[[br:Franz Kafka]]
+[[bg:Франц Кафка]]
+[[ca:Franz Kafka]]
+[[cs:Franz Kafka]]
+[[cy:Franz Kafka]]
+[[da:Franz Kafka]]
+[[de:Franz Kafka]]
+[[et:Franz Kafka]]
+[[el:Φραντς Κάφκα]]
+[[es:Franz Kafka]]
+[[eo:Franz Kafka]]
+[[eu:Franz Kafka]]
+[[fa:فرانتس کافکا]]
+[[fo:Franz Kafka]]
+[[fr:Franz Kafka]]
+[[fy:Franz Kafka]]
+[[ga:Franz Kafka]]
+[[gd:Franz Kafka]]
+[[gl:Franz Kafka]]
+[[ko:프란츠 카프카]]
+[[hr:Franz Kafka]]
+[[io:Franz Kafka]]
+[[ilo:Franz Kafka]]
+[[id:Franz Kafka]]
+[[is:Franz Kafka]]
+[[it:Franz Kafka]]
+[[he:פרנץ קפקא]]
+[[jv:Franz Kafka]]
+[[ka:ფრანც კაფკა]]
+[[sw:Franz Kafka]]
+[[ku:Franz Kafka]]
+[[la:Franciscus Kafka]]
+[[lv:Francs Kafka]]
+[[lb:Franz Kafka]]
+[[lt:Franz Kafka]]
+[[hu:Franz Kafka]]
+[[mk:Франц Кафка]]
+[[ml:ഫ്രാന്‍സ് കാഫ്‌ക]]
+[[mr:फ्रांत्स काफ्का]]
+[[ms:Franz Kafka]]
+[[mn:Франц Кафка]]
+[[my:ဖရန့်ဇ်ကဖ်ကာ]]
+[[nl:Franz Kafka]]
+[[ja:フランツ・カフカ]]
+[[no:Franz Kafka]]
+[[nn:Franz Kafka]]
+[[oc:Franz Kafka]]
+[[uz:Franz Kafka]]
+[[pms:Franz Kafka]]
+[[pl:Franz Kafka]]
+[[pt:Franz Kafka]]
+[[ro:Franz Kafka]]
+[[ru:Кафка, Франц]]
+[[sq:Franz Kafka]]
+[[simple:Franz Kafka]]
+[[sk:Franz Kafka]]
+[[sl:Franz Kafka]]
+[[sr:Франц Кафка]]
+[[sh:Franc Kafka]]
+[[fi:Franz Kafka]]
+[[sv:Franz Kafka]]
+[[ta:பிராண்ஸ் காஃப்கா]]
+[[vi:Franz Kafka]]
+[[tr:Franz Kafka]]
+[[uk:Кафка Франц]]
+[[vo:Franz Kafka]]
+[[zh-yue:卡夫卡]]
+[[diq:Franz Kafka]]
+[[bat-smg:Franz Kafka]]
+[[zh:弗兰兹·卡夫卡]]
+[[ar:فرانتس كافكا]]
+[[arz:كافكا]]
+[[ast:Franz Kafka]]
+[[az:Frans Kafka]]
+[[bn:ফ্রান্‌ৎস কাফকা]]
+[[zh-min-nan:Franz Kafka]]
+[[bs:Franz Kafka]]
+[[br:Franz Kafka]]
+[[bg:Франц Кафка]]
+[[ca:Franz Kafka]]
+[[cs:Franz Kafka]]
+[[cy:Franz Kafka]]
+[[da:Franz Kafka]]
+[[de:Franz Kafka]]
+[[et:Franz Kafka]]
+[[el:Φραντς Κάφκα]]
+[[es:Franz Kafka]]
+[[eo:Franz Kafka]]
+[[eu:Franz Kafka]]
+[[fa:فرانتس کافکا]]
+[[fo:Franz Kafka]]
+[[fr:Franz Kafka]]
+[[fy:Franz Kafka]]
+[[ga:Franz Kafka]]
+[[gd:Franz Kafka]]
+[[gl:Franz Kafka]]
+[[ko:프란츠 카프카]]
+[[hr:Franz Kafka]]
+[[io:Franz Kafka]]
+[[ilo:Franz Kafka]]
+[[id:Franz Kafka]]
+[[is:Franz Kafka]]
+[[it:Franz Kafka]]
+[[he:פרנץ קפקא]]
+[[jv:Franz Kafka]]
+[[ka:ფრანც კაფკა]]
+[[sw:Franz Kafka]]
+[[ku:Franz Kafka]]
+[[la:Franciscus Kafka]]
+[[lv:Francs Kafka]]
+[[lb:Franz Kafka]]
+[[lt:Franz Kafka]]
+[[hu:Franz Kafka]]
+[[mk:Франц Кафка]]
+[[ml:ഫ്രാന്‍സ് കാഫ്‌ക]]
+[[mr:फ्रांत्स काफ्का]]
+[[ms:Franz Kafka]]
+[[mn:Франц Кафка]]
+[[my:ဖရန့်ဇ်ကဖ်ကာ]]
+[[nl:Franz Kafka]]
+[[ja:フランツ・カフカ]]
+[[no:Franz Kafka]]
+[[nn:Franz Kafka]]
+[[oc:Franz Kafka]]
+[[uz:Franz Kafka]]
+[[pms:Franz Kafka]]
+[[pl:Franz Kafka]]
+[[pt:Franz Kafka]]
+[[ro:Franz Kafka]]
+[[ru:Кафка, Франц]]
+[[sq:Franz Kafka]]
+[[simple:Franz Kafka]]
+[[sk:Franz Kafka]]
+[[sl:Franz Kafka]]
+[[sr:Франц Кафка]]
+[[sh:Franc Kafka]]
+[[fi:Franz Kafka]]
+[[sv:Franz Kafka]]
+[[ta:பிராண்ஸ் காஃப்கா]]
+[[vi:Franz Kafka]]
+[[tr:Franz Kafka]]
+[[uk:Кафка Франц]]
+[[vo:Franz Kafka]]
+[[zh-yue:卡夫卡]]
+[[diq:Franz Kafka]]
+[[bat-smg:Franz Kafka]]
+[[zh:弗兰兹·卡夫卡]]
