*Empty MediaWiki Message*

--- a/فرانز_کافکا.mw
+++ b/فرانز_کافکا.mw
@@ -22,6 +22,7 @@
 [[cy:Franz Kafka]]
 [[da:Franz Kafka]]
 [[de:Franz Kafka]]
+[[en:Franz Kafka]]
 [[et:Franz Kafka]]
 [[el:Φραντς Κάφκα]]
 [[es:Franz Kafka]]
