*Empty MediaWiki Message*

--- a/مارک_ټوېن.mw
+++ b/مارک_ټوېن.mw
@@ -1,7 +1,78 @@
-مارک تواین؛ پېژندل شوی داستان لیکوال نوم
-
 مارک تواین (Mark Twain) د پیاوړي امریکايي لیکوال سامویل لنګهورن کلمنز(Samuel Langhorne Clemens) مستعار نوم دی. هغه د ۱۸۳۵ زيږېدي کال د نومبر په ۳۱ نېټه د امریکا په فلوریدا(Florida) ایالت کې د میسوري په پوله کې په یو کلي کې نړۍ ته سترګې وغړولې. پلار یې قاضي او یو کوچنی سوداګر وو چې په اصل کې د وېرجینیا ایالت اوسېدونکی وو او په کنتاکي کې یې د حقوقو په برخه کې زده کړې کړې وې او په هماغه ځای کې یې د جین همپتون په نوم له یوې مذهبي مېرمنې سره واده وکړ. وړکتوب یې د ميسي سي پي سېند په غاړه کې د پراته هانیبال (Hannibal) په کلي کې تېر کړ. 
 پلار یې دهغه په دولس کلنۍ له نړۍ سترګې پټې کړې، او سامویل اړ شو چی په یوه چاپځي کې کار وکړي او وروسته یې د ورور اوریون په یوه ورځپاڼه کې کار پیل کړ. په اتلس کلنۍ کې د میسوري سنټ لویس ته لاړ، له هغه ځایه نیویارک ته ولاړ او څه موده یې په چاپځایونو کې کار وکړ. په دوه دریو کلونو کې بېلابېلو ښارونو ته لاړ او د ټایپسټ په توګه به یې کار کاوه. په دې موده کې یې سویلي امریکا ته هم یو ناکام سفر وکړ، د ۱۸۵۷ کاله یې تر ۱۸۶۴ کال پورې په میسي سي پی سیند کښتۍ چلوله. په ۱۸۵۹ کال یې د کښتۍ د چلوونکي اجازه لیک تر لاسه کړ او په دې حال کې یې د ګڼ شمېر مجلو لپاره طنزي مقالې ولیکلې. په ۱۸۶۶ کال یې د لویدیځ له سترې ورځپاڼې آلتا کلیفرنیا سره تړون لاسلیک کړ. 
 لومړی داستان یې په ۱۸۶۵ کال د (The Celebrated Jumping Frog of Calaveras County) په نوم په نیویارک کې خپور کړ او ناڅاپي یې شهرت ته ورساوه. په ۱۸۶۹ کال یې د کښتۍ په سفر کې ساده زړي(The Innocents Abroad) او دغه راز پرله پسې داستانونه خپاره کړل، چې ډېر ژر یې ځان ته پام راوګرځاوه. 
 د یو شتمن سوداګر له لور اولیوه لنګدن سره یې واده وکړ. د ۱۸۵۷ او ۱۸۹۴ کلونو ترمنځ شل کاله تر ټولو شتمن او خوښ لیکوال او پدې موده کې یې ښه کتابونه هم ولیکل. خو د ۱۸۹۰ لسیزې په نیمايي کې پرې تنګڅه راغله، او د عمر وروستي پنځلس کلونه یې له ګڼ شمېر ستونزو او جدي کتابونو له لیکلو سره تېر کړل. 
 د هغه په آثارو کې د طلايي وخت، د تام سایر پېښې، بشرڅه دی؟ شکمن بېګانه، او په میسي سي سي پي ژوند ته اشاره کولای شو.
+
+
+[[am:ማርክ ትዌይን]]
+[[ar:مارك توين]]
+[[az:Mark Tven]]
+[[bn:মার্ক টোয়েইন]]
+[[zh-min-nan:Mark Twain]]
+[[bs:Mark Twain]]
+[[br:Mark Twain]]
+[[bg:Марк Твен]]
+[[ca:Mark Twain]]
+[[cs:Mark Twain]]
+[[cy:Mark Twain]]
+[[da:Mark Twain]]
+[[de:Mark Twain]]
+[[en:Mark Twain]]
+[[et:Mark Twain]]
+[[el:Μαρκ Τουαίην]]
+[[es:Mark Twain]]
+[[eo:Mark Twain]]
+[[eu:Mark Twain]]
+[[fa:مارک تواین]]
+[[fr:Mark Twain]]
+[[ga:Mark Twain]]
+[[gl:Mark Twain]]
+[[gu:માર્ક ટ્વેઇન]]
+[[ko:마크 트웨인]]
+[[hi:मार्क ट्वैन]]
+[[hr:Mark Twain]]
+[[io:Mark Twain]]
+[[id:Mark Twain]]
+[[is:Mark Twain]]
+[[it:Mark Twain]]
+[[he:מארק טוויין]]
+[[ka:მარკ ტვენი]]
+[[sw:Mark Twain]]
+[[la:Mark Twain]]
+[[lt:Mark Twain]]
+[[lij:Mark Twain]]
+[[jbo:Mark Twain]]
+[[hu:Mark Twain]]
+[[ml:മാര്‍ക് ട്വയിന്‍]]
+[[mr:मार्क ट्वेन]]
+[[ms:Mark Twain]]
+[[mn:Марк Твен]]
+[[nl:Mark Twain]]
+[[ja:マーク・トウェイン]]
+[[no:Mark Twain]]
+[[nn:Mark Twain]]
+[[oc:Mark Twain]]
+[[uz:Mark Twain]]
+[[pl:Mark Twain]]
+[[pt:Mark Twain]]
+[[ro:Mark Twain]]
+[[ru:Марк Твен]]
+[[simple:Mark Twain]]
+[[sk:Mark Twain]]
+[[sl:Mark Twain]]
+[[sr:Марк Твен]]
+[[sh:Mark Twain]]
+[[fi:Mark Twain]]
+[[szl:Mark Twain]]
+[[sv:Mark Twain]]
+[[ta:மார்க் டுவெய்ன்]]
+[[th:มาร์ก ทเวน]]
+[[vi:Mark Twain]]
+[[tg:Марк Твейн]]
+[[tr:Mark Twain]]
+[[uk:Марк Твен]]
+[[vo:Mark Twain]]
+[[yo:Mark Twain]]
+[[bat-smg:Mark Twain]]
+[[zh:马克·吐温]]
