--- a/اشرف_غني.mw
+++ b/اشرف_غني.mw
@@ -7,9 +7,7 @@
 == زده کړې ==
 ابتدايه:  د استقلال عالي ليسه.متوسطه: د حبيبيې عالي ليسه.د ښوونځي په دوران کي د (AFS) يو کلن پروګرام د امريکا په متحده ايالاتو کي.بکلوريا:د حبيبيې عالي ليسه.ليسانس:لومړۍ شپږ مياشتي په کابل پوهنتون او د ليسانس بشپړه دوره د سياسي علومو په برخه کي د بيروت له امريکايي پوهنتون څخه.لومړۍ ماسټري:په سياسي علومو کي د بيروت له امريکايي پوهنتون څخه.دويمه ماسټري:په نړيوالو اړيکو او انسان پېژندنه کي، د امريکا د کولمبيا له پوهنتون څخه.درېيمه ماسټري:په نړيوالو اړيکو کي د کولمبيا له پوهنتون څخه.ډاکټري:په انسان پېژندنه (انټروپالوجي) کي د امريکا په کولمبيا پوهنتون کي.همدا راز د نړيوال بانک لپاره د امريکا د متحده ايالاتو د هارډورډ او سټنفورډ د پوهنتونونو له خوا د مشرتابه (ليډرشيپ) د يوه ځانګړي پروګرام ترسره کول.لومړۍ افتخاري ډاکټري:په ٢٠٠٧ کال کي دامريکا د متحده ايالاتو د سکرانتن له پوهنتون څخه دغه افتخاري ډاکټري ورکړل شوه.دويمه افتخاري ډاکټري:د ٢٠٠٨ کال په جون کي د کاناډا ګيلف پوهنتون نوموړي ته افتخاري ډاکټري ورکړه.ځانګړي زدکړي:د يادولو وړ ده چي ښاغلي ډاکټر محمداشرف غني له ماشومتوبه نيولې آن تر نن ورځي پوري د اسلامي تعليماتو د حصول لپاره هڅي کړي دي، خو تر ټولو جوت کار يې د ١٩٨٥ ميلادي کال څخه تر ١٩٨٦ ميلادي کال پوري د نبوي سيرت په باب د کراچي، لاهور او نورو ښارونو په مدرسو کي زدکړي دي، چي د نوموړي په وينا د ده لپاره خورا ارزښتمني وې.
 
-
-دندي:
-
+== دندي ==
 د کابل پوهنتون د هغه مهال د ادبياتو پوهنځي د بشري علومو په څانګه کي د پوهيالي او پوهنيار په رتبه استاد.
 په ١٩٧٧ ميلادي کال د ډنمارک په آروس پوهنتون کي د لنډ مهال لپاره مېلمه پروفيسر.
 يو کال د امريکا د متحده ايالاتو په ستر پوهنتون بکلي کي استاد.
@@ -79,5 +77,6 @@
 پر اور مي کړوي، لکه چي خام مي نه پرېږدي
 
 ډاکټر غني د افغاني ټولني له روايت او ثقافت څخه الهام اخيستى و، چي کلونه يې د دې ټاټوبي د صوفيه کرامو د پېښليک او ژوند او اند په راسپړنه تېر کړل، او لا تر اوسه هم د دې هيواد په اساسي مطالعه او څېړنه بوخت دئ.
+
 == لاس ته راوړنې ==
 همدا راز سږکال د امريکا د تفت پوهنتون ښاغلي ډاکټر اشرف غني ته د نړيوال وطندار تر عنوان لاندي د نړۍ ډېره ممتازه جايزه ورکړه، بايد وويل شي چي دا جايزه د نړۍ ډېرو کمو خلکو اخيستې، چي دا ځل يې يو افغان پروفيسر په اخيستو ونمانځل شو.
