*Empty MediaWiki Message*

--- a/اشرف_غني.mw
+++ b/اشرف_غني.mw
@@ -80,3 +80,5 @@
 
 == لاس ته راوړنې ==
 همدا راز سږکال د امريکا د تفت پوهنتون ښاغلي ډاکټر اشرف غني ته د نړيوال وطندار تر عنوان لاندي د نړۍ ډېره ممتازه جايزه ورکړه، بايد وويل شي چي دا جايزه د نړۍ ډېرو کمو خلکو اخيستې، چي دا ځل يې يو افغان پروفيسر په اخيستو ونمانځل شو.
+
+[[en:Ashraf Ghani]]
