--- a/اشرف_غني.mw
+++ b/اشرف_غني.mw
@@ -1,8 +1,9 @@
-نوم:  محمداشرف غني احمدزى
+[[Image:Commissioner Ashraf Ghani.jpg|thumb|200px|اشرف غني احمدزی د ۲۰۰۷ کال کې د ملګرو ملتونو په غونډې کې]]
 
-د پلار نوم: شاه جان احمدزى
+ډاکټر '''اشرف غني احمدزی''' د رياستونو د ښه والي د انسټېټيوټ ريس دی. ددې تنظيم بنسټ د ۲۰۰۵ ز. کال په جنورۍ کې ايښودل شوی او د همدغه تنظيم موخه، خپلو وطنوالو ته د رياستونو د خدمتونو د وړتيا پرمختګ دی. نوموړی د ۲۰۰۲ کال د جولاي نه تر ډېسمبر ۲۰۰۴ کاله پورې د افغانستان د سوداګرۍ وزير پاتې شوی. هغه په افغانستان کې د طالبانو د واک د راپرزېدلو وروسته د افغانستان د اقتصاد د بياراژوندي کولو لپاره لارې چارې هوارې کړې. ډاکټر اشرف غني احمدزی د د غريبانو د قانوني واکمن کولو د کميسون غړی هم دی. دا يو خپلواک کميسون دی چې د لومړي ځل لپاره د ملګرو ملتونو د پرمختيايي پروګرام UNDP لخوا يې بنسټ ايښودل شوی.
 
-زوکړه: ١٣٢٨ (هـ ل) ثور، کابل
+== مخينه ==
+اشرف غني احمدزی د شاه جان احمدزي زوی دی چې د ۱۳۲۸ ل. کال د غويي په مياشت کې د افغانستان په پلازمېنه کابل ښار کې يې سترګې نړۍ ته رڼې کړي. 
 
 == زده کړې ==
 ابتدايه:  د استقلال عالي ليسه.متوسطه: د حبيبيې عالي ليسه.د ښوونځي په دوران کي د (AFS) يو کلن پروګرام د امريکا په متحده ايالاتو کي.بکلوريا:د حبيبيې عالي ليسه.ليسانس:لومړۍ شپږ مياشتي په کابل پوهنتون او د ليسانس بشپړه دوره د سياسي علومو په برخه کي د بيروت له امريکايي پوهنتون څخه.لومړۍ ماسټري:په سياسي علومو کي د بيروت له امريکايي پوهنتون څخه.دويمه ماسټري:په نړيوالو اړيکو او انسان پېژندنه کي، د امريکا د کولمبيا له پوهنتون څخه.درېيمه ماسټري:په نړيوالو اړيکو کي د کولمبيا له پوهنتون څخه.ډاکټري:په انسان پېژندنه (انټروپالوجي) کي د امريکا په کولمبيا پوهنتون کي.همدا راز د نړيوال بانک لپاره د امريکا د متحده ايالاتو د هارډورډ او سټنفورډ د پوهنتونونو له خوا د مشرتابه (ليډرشيپ) د يوه ځانګړي پروګرام ترسره کول.لومړۍ افتخاري ډاکټري:په ٢٠٠٧ کال کي دامريکا د متحده ايالاتو د سکرانتن له پوهنتون څخه دغه افتخاري ډاکټري ورکړل شوه.دويمه افتخاري ډاکټري:د ٢٠٠٨ کال په جون کي د کاناډا ګيلف پوهنتون نوموړي ته افتخاري ډاکټري ورکړه.ځانګړي زدکړي:د يادولو وړ ده چي ښاغلي ډاکټر محمداشرف غني له ماشومتوبه نيولې آن تر نن ورځي پوري د اسلامي تعليماتو د حصول لپاره هڅي کړي دي، خو تر ټولو جوت کار يې د ١٩٨٥ ميلادي کال څخه تر ١٩٨٦ ميلادي کال پوري د نبوي سيرت په باب د کراچي، لاهور او نورو ښارونو په مدرسو کي زدکړي دي، چي د نوموړي په وينا د ده لپاره خورا ارزښتمني وې.
