--- a/عبدالکلام.mw
+++ b/عبدالکلام.mw
@@ -167,7 +167,7 @@ A cathlab is essential to carry out life-saving cardiac intervention procedures.
 {{end box}}
 
 [[ar:أبو بكر زين العابدين عبد الكلام]]
-[[bn:আবদুল কালাম]]
+[[bn:আবুল পাকির জয়নুল-আবেদিন আবদুল কালাম]]
 [[de:A. P. J. Abdul Kalam]]
 [[dv:އޭ ޕީ ޖޭ ޢަބްދުލްކަލާމް]]
 [[el:Αμπντούλ Καλάμ]]
