--- a/اشرف_غني.mw
+++ b/اشرف_غني.mw
@@ -5,7 +5,9 @@
 اشرف غني احمدزی د شاه جان احمدزي زوی دی چې د ۱۳۲۸ ل. کال د غويي په مياشت کې د افغانستان په پلازمېنه کابل ښار کې يې سترګې نړۍ ته رڼې کړي. 
 
 == زده کړې ==
-ابتدايه:  د استقلال عالي ليسه.متوسطه: د حبيبيې عالي ليسه.د ښوونځي په دوران کي د (AFS) يو کلن پروګرام د امريکا په متحده ايالاتو کي.بکلوريا:د حبيبيې عالي ليسه.ليسانس:لومړۍ شپږ مياشتي په کابل پوهنتون او د ليسانس بشپړه دوره د سياسي علومو په برخه کي د بيروت له امريکايي پوهنتون څخه.لومړۍ ماسټري:په سياسي علومو کي د بيروت له امريکايي پوهنتون څخه.دويمه ماسټري:په نړيوالو اړيکو او انسان پېژندنه کي، د امريکا د کولمبيا له پوهنتون څخه.درېيمه ماسټري:په نړيوالو اړيکو کي د کولمبيا له پوهنتون څخه.ډاکټري:په انسان پېژندنه (انټروپالوجي) کي د امريکا په کولمبيا پوهنتون کي.همدا راز د نړيوال بانک لپاره د امريکا د متحده ايالاتو د هارډورډ او سټنفورډ د پوهنتونونو له خوا د مشرتابه (ليډرشيپ) د يوه ځانګړي پروګرام ترسره کول.لومړۍ افتخاري ډاکټري:په ٢٠٠٧ کال کي دامريکا د متحده ايالاتو د سکرانتن له پوهنتون څخه دغه افتخاري ډاکټري ورکړل شوه.دويمه افتخاري ډاکټري:د ٢٠٠٨ کال په جون کي د کاناډا ګيلف پوهنتون نوموړي ته افتخاري ډاکټري ورکړه.ځانګړي زدکړي:د يادولو وړ ده چي ښاغلي ډاکټر محمداشرف غني له ماشومتوبه نيولې آن تر نن ورځي پوري د اسلامي تعليماتو د حصول لپاره هڅي کړي دي، خو تر ټولو جوت کار يې د ١٩٨٥ ميلادي کال څخه تر ١٩٨٦ ميلادي کال پوري د نبوي سيرت په باب د کراچي، لاهور او نورو ښارونو په مدرسو کي زدکړي دي، چي د نوموړي په وينا د ده لپاره خورا ارزښتمني وې.
+لومړنۍ زده کړې يې د استقلال عالي ليسه دويمې زده کړې يې د حبيبيې عالي ليسه کې سر ته رسولي بيا يې د ښوونځي په دوران کي د (AFS) يو کلن پروګرام د امريکا په متحده ايالاتو کي بشپړ کړی. تر دې وروسته يې د دوولسم ټولګي بری ليک د حبيبيې عالي ليسه نه ترلاسه کړی. ښاغلي احمدزي خپل د لوړو زده کړو پيل د کابل پوهنتون  نه پيل کړي او د شپږو مياشتو زده کړو وروسته يې د ليسانس بشپړه دوره د سياسي علومو په برخه کي د بيروت په امريکايي پوهنتون کې سر ته رسولې. د ليسانس د کچې وروسته يې خپله لومړنۍ ماسټري په سياسي علومو کي د بيروت له امريکايي پوهنتون کې بشپړه کړې، نوموړي خپله دويمه ماسټري په نړيوالو اړيکو او [[وګړپوهنه]] کې د امريکا په کولمبيا پوهنتون کې سر ته رسولې او په همدې توګه خپله درېيمه ماسټري يې هم په نړيوالو اړيکو کي د کولمبيا په پوهنتون کې کړې. تر دې وروسته يې خپله دوکتورا د وګړپوهنې په څانګه کې د امريکا د کولمبيا پوهنتون نه لاس ته راوړې. 
+
+همدا راز د نړيوال بانک لپاره د امريکا د متحده ايالاتو د هارډورډ او سټنفورډ د پوهنتونونو له خوا د مشرتابه (ليډرشيپ) د يوه ځانګړي پروګرام ترسره کول.لومړۍ افتخاري ډاکټري:په ٢٠٠٧ کال کي دامريکا د متحده ايالاتو د سکرانتن له پوهنتون څخه دغه افتخاري ډاکټري ورکړل شوه.دويمه افتخاري ډاکټري:د ٢٠٠٨ کال په جون کي د کاناډا ګيلف پوهنتون نوموړي ته افتخاري ډاکټري ورکړه.ځانګړي زدکړي:د يادولو وړ ده چي ښاغلي ډاکټر محمداشرف غني له ماشومتوبه نيولې آن تر نن ورځي پوري د اسلامي تعليماتو د حصول لپاره هڅي کړي دي، خو تر ټولو جوت کار يې د ١٩٨٥ ميلادي کال څخه تر ١٩٨٦ ميلادي کال پوري د نبوي سيرت په باب د کراچي، لاهور او نورو ښارونو په مدرسو کي زدکړي دي، چي د نوموړي په وينا د ده لپاره خورا ارزښتمني وې.
 
 == دندې ==
 د کابل پوهنتون د هغه مهال د ادبياتو پوهنځي د بشري علومو په څانګه کي د پوهيالي او پوهنيار په رتبه استاد.
