robot  Adding: [[war:Djibouti]]

--- a/جیبوتی.mw
+++ b/جیبوتی.mw
@@ -281,6 +281,7 @@ Although [[French language|French]] and [[Arabic language|Arabic]] are the offic
 [[vec:Gibuti]]
 [[vi:Djibouti]]
 [[vo:Cibutän]]
+[[war:Djibouti]]
 [[wo:Jibuti]]
 [[zh:吉布提]]
 [[zh-min-nan:Djibouti]]
