robot  Modifying: [[ro:Coasta de Fildeş]]

--- a/عاج_ساحل.mw
+++ b/عاج_ساحل.mw
@@ -279,7 +279,7 @@ Fil Dişi Sahil
 [[pms:Còsta d'Avòri]]
 [[pt:Costa do Marfim]]
 [[qu:Marphil Chala]]
-[[ro:Côte d'Ivoire]]
+[[ro:Coasta de Fildeş]]
 [[ru:Кот-д’Ивуар]]
 [[sc:Costa de Ivòriu]]
 [[scn:Côte d'Ivoire]]
