--- a/ځمکپوهنه.mw
+++ b/ځمکپوهنه.mw
@@ -317,7 +317,7 @@ Geographic qualitative methods, or ethnographical; research techniques, are used
 [[ms:Geografi]]
 [[mt:Ġeografija]]
 [[my:ပထဝီဝင်]]
-[[mzn:Jəögrafi / جئوگرافی]]
+[[mzn:جئوگرافی]]
 [[nah:Cemānāhuacāyōtl]]
 [[nds:Geographie]]
 [[nds-nl:Geografie]]
