--- a/ګرجستان.mw
+++ b/ګرجستان.mw
@@ -376,6 +376,7 @@ Today most of the population practice [[Orthodox Christianity]] of the [[Georgia
 [[lb:Georgien]]
 [[li:Georgië]]
 [[lij:Geòrgia (stato)]]
+[[lmo:Georgia]]
 [[lt:Gruzija]]
 [[lv:Gruzija]]
 [[mk:Грузија]]
@@ -417,7 +418,7 @@ Today most of the population practice [[Orthodox Christianity]] of the [[Georgia
 [[te:జార్జియా (దేశం)]]
 [[tg:Гурҷистон]]
 [[th:ประเทศจอร์เจีย]]
-[[tk:Gürjüstan]]
+[[tk:Gruziýa]]
 [[tl:Georgia]]
 [[tr:Gürcistan]]
 [[udm:Грузия]]
