--- a/چنگېز_خان.mw
+++ b/چنگېز_خان.mw
@@ -1,5 +1,5 @@
 [[Image:Genghis Khan.jpg|200px|left| چنګېز خان]]
-د چنګېز خان اصلي نوم تېموجن ؤ، خو كله چې يې ډېر بري خپل كړل، نو د چنګېز خان لقب يې ځانته غوره كړ، چې د (ټيټ يا لاندې ګوره) په مانا دى. 
+د '''چنګېز خان''' اصلي نوم تېموجن ؤ، خو كله چې يې ډېر بري خپل كړل، نو د چنګېز خان لقب يې ځانته غوره كړ، چې د (ټيټ يا لاندې ګوره) په مانا دى. 
 دې په ۱۱۶۲ز <ref name="birth">Rashid al-Din asserts that Genghis Khan lived to the age of 72, placing his year of birth at 1155. The ''Yuanshi'' (元史, ''History of the [[Yuan dynasty]]'', not to be confused with the era name of the [[Han Dynasty]]), records his year of birth as 1165. According to Ratchnevsky, accepting a birth in 1155 would render Genghis Khan a father at the age of 30 and would imply that he personally commanded the expedition against the Tanguts at the age of 72. Also, according to the ''[[Altan Tobci]]'', Genghis Khan's sister, Temülin, was nine years younger than he; but the Secret History relates that Temülin was an infant during the attack by the Merkits, during which Genghis Khan would have been 18, had he been born in 1155. Zhao Hong reports in his travelogue that the Mongols he questioned did not know and had never known their ages.</ref>&ndash; كال زېږېدلې او په ۱۲۲۷ز د اګست په ۱۸مه نيټه مړ شوې. 
 تيموجن د خان (واكمن) كورنۍ بنسټ اېښودونكې دى، چې د وخت په تېرېدو سره يې د خاقان په نامه يوه ستره امپراتوري جوړه كړه، چې د نړۍ په تاريخ كې له سترو امپراتوريو څخه ګڼل كېږي. 
 
