--- a/چنگېز_خان.mw
+++ b/چنگېز_خان.mw
@@ -11,7 +11,7 @@
 
 
 
-==Early life==
+==مخينه==
 ===زوكړه===
 [[Image:onon.jpg|thumb|200px|The [[د اونون سيند]], [[منګوليا]], هغه ځاى چې تيموجېن پكې وزېږېد او رالوى شو.]]
 په هغه وخت كې د ليكدود د كمښت له امله د تيموجن (چنګېزخان) د زېږېدنې او كوشنيتوب په اړه څه كره مالومات په لاس كې نشته، مګر كومې سرچينې چې دده د ژوند په اړه يوڅه مالومات وړاندې كوي، هغوي هم پرې چندانې باوري نه ول.
