--- a/شمېرپوهنه.mw
+++ b/شمېرپوهنه.mw
@@ -234,6 +234,7 @@ Mathematics is not about unrestricted [[theorem proving]], any more than [[liter
 * [http://metamath.org/ ''Metamath'']. A site and a language, that formalize mathematics from its foundations.
 * [http://world.std.com/~reinhold/dir/mathmovies.html Mathematics in the Movies]. A guide to major [[motion picture]]s with scenes of real mathematics
 * [http://math.cofc.edu/faculty/kasman/MATHFICT/default.html Mathematics in fiction]. Links to works of [[fiction]] that refer to mathematics or mathematicians. 
+*[http://www.trmatematik.com Trmatematik]
 * [http://www.mathhelpforum.com/math-help Mathematics Help Forum]. A forum, for mathematics help, discussion and debate. 
 * [http://www.sosmath.com/CBB S.O.S. Mathematics Cyberboard] a mathematics help forum which incorporates a [[LaTeX]] extension, making it easier for members to write and display mathematical formulae.
 * [http://www-history.mcs.st-and.ac.uk/~history/ Mathematician Bibliography]. Extensive history and quotes from all famous mathematicians.
