--- a/تهافت_الفلاسفه.mw
+++ b/تهافت_الفلاسفه.mw
@@ -1,14 +1,17 @@
 {{صاف}}
-[[انځور:Ibn rushd1.jpg]]
+[[انځور:Ibn rushd1.jpg|left|thumb|240px| نامتو فیلسوف ابن رشد اندلسي]]
+
 '''“تهافت الفلاسفه”''' او تهافت التهافت د مسلمانې فلسفې له ځانګړو او مهمو كتابونو څخه ګڼل كېږي. لدې دواړو څخه لومړې “تهافت الفلاسفه”، چې د ابو حامد محمد بن محمد الغزالي ليكلې كتاب دى. ددې (“تهافت الفلاسفه”) او (احياء علوم الدين) كتابونو له وجې غزالي ته دده انصارو او مريدانو د امام او حجة الاسلام لقب وركړ. او دا ځكه چې ده خپل ځآن د اسلامي ګروهو او شريعت څخه د ننګې لپاره وقف كړې و، او د ټولو فيلسوفانو او دهغوي د فلسفې مقابله وكړه، چې د يونان (چاته چې د يونان لرغووني ويل كېږي) څخه نيولې تر ابن سينا پورې (چې د غزالي تر پيره ددې كړۍ وروستې فيلسوف پېژندل كېږي) تېر شوي دي.
 
 “تهافت التهافه” د غزالي د “تهافت الفلاسفه” په رد كې تقريبا ۱۰۰ كاله وروسته د [[ابن رشد]] اندلسي لخوا كښل شوې. د فلسفې او فيلسوفانو سره د [[ابن رشد]] هماغه اړيكه وه، كومه چې د غزالي له شريعت سره وه، يانې ده خپل ژوند د فيلسوفانو په ننګه او مدافعت (چې د يونان له لومړي پير څخه تر خپل پير پورې تېر شوې دى) لپاره وقف كړې و.
 د غزالي مړينه د شپږمې پيړۍ په سر كې وشوه، او د [[ابن رشد]] هغه د پېړۍ په وروستۍ لسيزه كې. نو پدې توګه دده لپاره د “حجۀ الحكمۀ و الحكماء” لقب يو وړ لقب دى، لكه څرنګه چې د غزالي ته حجۀ الاسلام ويل كېږي، ځكه چې د “تهافت الفلاسفه” كتاب پوره يوه پېړۍ په فلسفه او فكري آزادى باندې پرله پسې بريدونه كړي. د پوهانو عقلونه يې كمزورې ګڼلي، هغوي يې رټل شوي د دوزخ د اور وړ ګرځولي، او د دارنګه يې د مخلوق د بدګومانۍ او د خالق د غضب نښه ګرځولئ. د ختيز او لوديز هېڅ يو فيلسوف ددې كتاب ترديد ندې كړې، او نه يې هم ددې كتاب ځينې تورونه چې د فلسفې لپاره د ذلت او رسوايۍ لامل ګرځېدلې ناسم ګڼلي وي. 
+
 [[ابن رشد]] پدې كتاب تنقيد كولو سره د خپلو په فلسفه مينو اسلافو، ښوونكو، زده كوونكو او نورو مينه والو څخه دا داغ لرې كړ، چې نور له ده څخه مخكې نور فلاسفه پكې پاتې راغلي ول.
 
 [[ابن رشد]] فلسفه كې يو ځل بيا نوې روح پوه كړ او د هغې شان و شوكت او ښكلا يې بيا را ژوندې كړه. حال دا چې غزالي يې زړه زخمي او روح فرسوده كړې و.
 
 په “تهافت الفلاسفه” باندې له يوې لنډې سريزې وړاندې كولو څخه وروسته، چې دې كتاب د نوم او د هغې د ليكنې لامل به روښانه كړي، د تهافت التهافت په اړه د خپلو خيلاتو اظهار وكړو.
+
 د كتاب نوم او موخې يې غزالي وايي: (ما ددې كتاب پيلامه پدې موخه كړې ترڅو ددې په وسيله د لرغونو فيلسوفانو ترديد وشي او د هغوي د ګروهو كمزوري او د الهياتو كې د هغوي د خيالاتو تناقض روښانه شي. دارنګه د هغوي د مذهب نيمګړتياو او د هغې د خندا وړ او د هوښيارانو لپاره د عبرت نښۀ ده، زما موخه ددوي له هغو مختلفو ګروهو او خيالاتو څخه ده، د كومو له وجې چې فيلسوفان له نور ولس څخه بيل او ځانګړې كوي.)
 لرغوني فيلسوفان او ددې كتاب له ليكنې څخه د غزالي موخه
 د غزالي اصول دا دي، چې د فيلسوفانو د مذهب تشرېح بعينه وكړاى شي، ترڅو تقليد پرستو ملحدينو ته دا مالومه شي، چې په لومړيو او وروستيو كې چې كوم نامتو كسان تېر شوي، هغوي ټول پر څښتن او د آخرت پر ورځ ايمان درلود.
@@ -27,6 +30,7 @@
 
 == د فيلسوفانو علوم ==
 غزالي ليكي: (دده “غزالي” قانوني بحب به د الهياتو مسائلو پورې محدود وي، ځكه چې د هندسي او مطق علومو كې د تنقيد ځاى نه وي، فيلسوفانو د حسابي او منطقي علومو په رڼا كې د خپلو الهي علومو په صداقت استدلال كړې، او ددې دلايلو په وسيله يې كمزوري عقل خاوندانو ته دوكه وركړې.
+
 كه چېرې د دوي د حسابي او منطقي علومو په څېر د دوي الهي علوم دلايل هم پرېكنده او د منلو وړ واى، نو پدې علومو كې به دده (غزالي) هېڅ اختلاف نه واى، لكه څرنګه چې په حسابي علومو كې دوي كوم اختلاف ندې كړې.
 په طبعي ډول د غزالي ددې مسئلو ترديد نشو كوالى، ځكه چې هغه د حسابي او منطقي علومو سموالې منلو.
 
