robot  Adding: [[szl:Andora]]

--- a/اندورا.mw
+++ b/اندورا.mw
@@ -295,6 +295,7 @@ Andorra's long [[history]] has provided it with a rich [[mythology]] and an abun
 [[sr:Андора]]
 [[sv:Andorra]]
 [[sw:Andorra]]
+[[szl:Andora]]
 [[ta:அண்டோரா]]
 [[tet:Andorra]]
 [[tg:Андорра]]
