*Empty MediaWiki Message*

--- a/محمد_ظاهر_شاه.mw
+++ b/محمد_ظاهر_شاه.mw
@@ -16,10 +16,16 @@
 |  مړينه =  ۲۳ د جولای، ۲۰۰۷ ز.پ 
 |دپاچاهۍ-دور
  }}
-اعيحضرت  '''محمد ظاهر  شاه'''   د  اعليحضرت  محمد  نادر خان  زوی  دئ  چي  په  ١٢٩٣ هـ ل  ١٩١٤ م   کال  په  کابل  کي  زېږېدلئ  دئ .  د  کابل  د  حبيبيې  او  استقلال  په  لېسو  کي  يې  زده کړي  و  کړې .  بيا  د  پلار  سره  فرانسې  ته  ولاړ  او  هلته  يې  په  زده  کړو  پيل  و  کړ .  په  ۱۳۰۹ هـ ل  کال  کي  بيرته  د  فرانسې  څخه  هيواد  ته  راغئ  او  په  عسکري  څانګه  کي  يې  خپلو  زده کړو  ته  دوام  ور  کړ .<br> 
-يوځل  يې  د  دفاع  د وزارت  د  وکيل  او  بيا  يې  د  پوهني  د  وزارت  د  وکيل  په  توګه  کار  کړئ  دئ .<br>
-د  پلار  تر  مړني  وروسته  په  ١٣١٢ هـ ل  کال  کي  پاچا  سو  او  د  ١٣٥٢ هـ ل  کال  د  سرطان  تر  ٢٥  نېټې  پوري  د  افغانستان  پاچا  وو .<br>
-څرنګه  چي  ظاهر  خان  د پاچهۍ  تجربه  نه  درلوده  نو  زياتره  چاري  د  ده  د  تره  محمد  هاشم  خان  له  خوا  چي  د  ده  د  حکومت  صدر  اعظم  وو  سرته  رسېدلې . سردار  محمد  هاشم  خان  د  ١٩٣٣ م  کال  څخه  تر  ١٩٤٦ م  پوري  صدراعظم  وو .  تر  ده  وروسته  يې  د  ده  ورور  شاه  محمود  خان  صدراعظم  سو  ١٩٤٦ م ـــ      ١٩٥٣ م  .<br>
+اعيحضرت  '''محمد ظاهر  شاه''' (زېږېدنه: ۱۶ د اکتوبر، ۱۹۱۴ ز. کال، مړينه: ۲۳ د جولای، ۲۰۰۷ ز. کال) د افغانستان وروستی پاچا و. نومړی د اعليحضرت  [[محمد نادر خان]] زوی و چې د خپل د پلار د مړينې وروسته د افغانستان پاچا وټاکل شو.
+
+== مخينه ==
+محمد ظاهر شاه په ١٢٩٣ هـ ل ١٩١٤ ز. کال، په کابل کي زېږېدلی و.
+
+== زده کړې ==
+د کابل د حبيبيې او استقلال په لېسو کي يې زده کړي و کړې.  بيا د پلار سره فرانسې ته ولاړ او هلته يې په زده کړو پيل و کړ. په ۱۳۰۹ هـ ل کال کي بيرته د فرانسې څخه هيواد ته راغئ او په عسکري څانګه کي يې خپلو زده کړو ته دوام ورکړ.
+
+== دندې ==
+يوځل يې د دفاع د وزارت د وکيل او بيا يې د پوهني د وزارت د وکيل په توګه کار کړئ دئ. د پلار تر مړني وروسته په ١٣١٢ هـ ل کال کي  پاچا سو او د ١٣٥٢ هـ ل کال د سرطان تر ٢٥ نېټې پوري د افغانستان پاچا وو. څرنګه  چي  ظاهر  خان  د پاچهۍ  تجربه  نه  درلوده  نو  زياتره  چاري  د  ده  د  تره  محمد  هاشم  خان  له  خوا  چي  د  ده  د  حکومت  صدر  اعظم  وو  سرته  رسېدلې . سردار  محمد  هاشم  خان  د  ١٩٣٣ م  کال  څخه  تر  ١٩٤٦ م  پوري  صدراعظم  وو .  تر  ده  وروسته  يې  د  ده  ورور  شاه  محمود  خان  صدراعظم  سو  ١٩٤٦ م ـــ      ١٩٥٣ م  .<br>
 <br>
 تر  دوهم  نړيوال  جنګ  وروسته  افغانستان  د  لويو  پروژو  په  منځ  ته  راوړو  پيل  و  کړ .  د  هلمند  او  ارغندداو  د  بندونو  جوړول  د  امريکا  د  متحده  ايالاتو  د  تخنيکي   او  اقتصادي  همکاريو  څخه  دي .<br>
 <br>
