--- a/محمد_ظاهر_شاه.mw
+++ b/محمد_ظاهر_شاه.mw
@@ -16,7 +16,7 @@
 |  مړينه =  ۲۳ د جولای، ۲۰۰۷ ز.پ 
 |دپاچاهۍ-دور
  }}
-اعيحضرت  '''محمد ظاهر  شاه''' (زېږېدنه: ۱۶ د اکتوبر، ۱۹۱۴ ز. کال، مړينه: ۲۳ د جولای، ۲۰۰۷ ز. کال) د افغانستان وروستی پاچا و. نومړی د اعليحضرت  [[محمد نادر خان]] زوی و چې د خپل د پلار د مړينې وروسته د افغانستان پاچا وټاکل شو.
+اعيحضرت  '''محمد ظاهر  شاه''' (زېږېدنه: ۱۶ د اکتوبر، ۱۹۱۴ ز. کال، مړينه: ۲۳ د جولای، ۲۰۰۷ ز. کال) د افغانستان وروستی پاچا و. نومړی د اعليحضرت  [[محمد نادر شاه]] زوی و چې د خپل د پلار د مړينې وروسته د افغانستان پاچا وټاکل شو.
 
 == مخينه ==
 محمد ظاهر شاه په ١٢٩٣ هـ ل ١٩١٤ ز. کال، په کابل کي زېږېدلی و.
