*Empty MediaWiki Message*

--- a/علي_احمد_جلالي.mw
+++ b/علي_احمد_جلالي.mw
@@ -26,3 +26,7 @@ Monitor, Baltimore Sun, Khalij Times ,Frontier Post او د امريکا د مت
 استاد علی احمد جلالي د افغانستان د لوړو زده کړو په مؤسسو کی درس ورکړی دی . د متحدو ایالتونو د ملی دفاع په پوهنتون اوداسی نورو مؤسسو لکه :
 
 U.S. Army War College, U.S. Naval Postgraduate School, Monterey, California, Command and General Staff College, Fort Leavenworth, Kansas, and the British Army Staff College, Camberley, England
+
+
+
+[[en:Ali Ahmad Jalali]]
