--- a/عبدالرحمان_بابا.mw
+++ b/عبدالرحمان_بابا.mw
@@ -252,6 +252,8 @@
 {{ب|و  بــــد خواوو  تــــه  هيڅ  څوک  نصيحت  نــــه  کا|رحمان  ستا  په  غم  شريک  دئ  که  بــــــاور  کـــړې}}
 {{د شعر پای}}
 
+== باندنۍ تړنې ==
+[[http://www.rahmanbabadiwan.com/ د رحمان بابا ديوان]] - دا وېبپاڼه په انګرېزي ژبه ده خو د رحمان بابا بشپړ ديوان په پښتو ژبه پکې پروت دی
 
 
 
