--- a/عبدالرحمان_بابا.mw
+++ b/عبدالرحمان_بابا.mw
@@ -253,7 +253,7 @@
 {{د شعر پای}}
 
 == باندنۍ تړنې ==
-[[http://www.rahmanbabadiwan.com/ د رحمان بابا ديوان]] - دا وېبپاڼه په انګرېزي ژبه ده خو د رحمان بابا بشپړ ديوان په پښتو ژبه پکې پروت دی
+[http://www.rahmanbabadiwan.com/ د رحمان بابا ديوان] - دا وېبپاڼه په انګرېزي ژبه ده خو د رحمان بابا بشپړ ديوان په پښتو ژبه پکې پروت دی
 
 
 
