--- a/عبدالرحمان_بابا.mw
+++ b/عبدالرحمان_بابا.mw
@@ -253,8 +253,13 @@
 {{د شعر پای}}
 
 == باندنۍ تړنې ==
-[http://www.rahmanbabadiwan.com/ د رحمان بابا ديوان] - دا وېبپاڼه په انګرېزي ژبه ده خو د رحمان بابا بشپړ ديوان په پښتو ژبه پکې پروت دی
-
+*[http://www.rahmanbabadiwan.com/ د رحمان بابا ديوان] - دا وېبپاڼه په انګرېزي ژبه ده خو د رحمان بابا بشپړ ديوان په پښتو ژبه پکې پروت دی
+*[http://www.rahmanbaba-poetry.com/rahmanbaba.htm/ د رحمان بابا ژوند]
+*[http://www.virtualafghans.com/culture/poetry/rahman_baba/ د رحمان بابا ژوندليک او نور مالومات]
+*[http://www.afghanan.net/poets/abdurahman.htm/ عبدالرحمان بابا]
+*[http://www.rahmanbaba-poetry.com/index.htm رحمان بابا په انګريزي ژبه]
+*[http://www.interlitfoundation.org/ د انټرلېټ بنسټ]
+*[http://www.geocities.com/dastaaan/ پښتانه شاعران د ډاکټر تنوير اورکزي وېبپاڼه]
 
 
 [[وېشنيزه: پښتانه شاعران]]
