*Empty MediaWiki Message*

--- a/مصر.mw
+++ b/مصر.mw
@@ -1,4 +1,4 @@
-:''Egypt redirects here. For information on the ancient civilization, see [[Ancient Egypt]]''
+:''دا ليکنه د مصر د هېواد په اړه ده. د لرغوني مصري تمدن په اړه ليکنه تاسو د [[لرغونی مصر]] تر سرليک لاندې لوستلی شی''
 {{Infobox_Country|
 |اصلي نوم = جمهوريّة مصر العربيّة<br>د مصر عربي جمهوريت
 |عام نوم = مصر
