--- a/مصر.mw
+++ b/مصر.mw
@@ -53,7 +53,6 @@
 
 د مصر جمهوری دولت، چې په انګرېزۍ کې ورته [[egypt]] وایي، د شمالي افریقا عربي هېواد دی. ددې هېواد تقریبا ټوله برخه په افریقا لویه وچه کې موقعیت لري. د سینا سارا او سویز کانال یو څه برخه یې په اسیا کې موقعیت لري.
 
-
 دې هېواد د زمکې۱،۰۰۱،۴۵۰ کیلومتر مربع سیمه نیولې، د غزې په پټۍ کې له [[فلسطين]] سره په سویل کې، سوډان، [[لېبیا]]او شمال او ختیځ لورو ته د مدیترانې او سور بحر سره بریدونه لري. 
 
 د مصر هېواد د نړۍ له پینځلسو نامتو هېوادونو څخه شمېرل کېږي.د ۷۷ ملیونو ډېرې برخه یې [[د نیل رود]] پر غاړه، چېرې چې کرنیزه او حاصل خیز زږمکې شتون لري، ژوند کوي. 
@@ -65,7 +64,8 @@
 د غزې اهرام، د کرنک عبادتځای، او د بادشاهانو دره، او د هغو کیندنو او انځوریځو دیوالونو په واسطه په نړیواله کچه پېژندل کېږي. 
 
 نن سباد [[مصر]] هېواد د سیاسي او کولتوري اړخ څخه د هرچا د پام وړ دی، او د منځني ختیځ هېوادونو په سیاسي او پوځي ادلون بدلون کې ښه کارنده ونډه لري.
-==لرغونتوب او د نومونې پېښلیک==]]
+
+==لرغونتوب او د نومونې پېښلیک==
 
 ==سیاسیت==
 
