--- a/آسيا.mw
+++ b/آسيا.mw
@@ -142,6 +142,7 @@
 [[pag:Asia]]
 [[pam:Asia]]
 [[pdc:Asie]]
+[[pih:Asya]]
 [[pl:Azja]]
 [[pms:Asia]]
 [[pt:Ásia]]
@@ -165,6 +166,7 @@
 [[so:Aasiya]]
 [[sq:Azia]]
 [[sr:Азија]]
+[[stq:Asien]]
 [[su:Asia]]
 [[sv:Asien]]
 [[sw:Asia]]
