robot  Adding: [[stq:Stiernkunde af Astronomie]]

--- a/ستورپوهنه.mw
+++ b/ستورپوهنه.mw
@@ -483,6 +483,7 @@ Amateur astronomers continue to make scientific contributions to the field of as
 [[sm:Astronomy]]
 [[sq:Astronomia]]
 [[sr:Астрономија]]
+[[stq:Stiernkunde af Astronomie]]
 [[su:Astronomi]]
 [[sv:Astronomi]]
 [[sw:Falaki]]
