--- a/اتريش.mw
+++ b/اتريش.mw
@@ -374,6 +374,7 @@ Although Austrians can look back with pride on their cultural past, current Aust
 [[pag:Austria]]
 [[pam:Austria]]
 [[pdc:Eestereich]]
+[[pih:Ostriya]]
 [[pl:Austria]]
 [[pms:Àustria]]
 [[pt:Áustria]]
