robot  Adding: [[pih:Eserbeyjan]]

--- a/ازربايجان.mw
+++ b/ازربايجان.mw
@@ -253,6 +253,7 @@ Although during his presidency, Aliyev managed to reduce the country's unemploym
 [[oc:Azerbaitjan]]
 [[os:Азербайджан]]
 [[pam:Azerbaijan]]
+[[pih:Eserbeyjan]]
 [[pl:Azerbejdżan]]
 [[pms:Azerbaigian]]
 [[pt:Azerbaijão]]
