*Empty MediaWiki Message*

--- a/حبيب_الله_غمخور.mw
+++ b/حبيب_الله_غمخور.mw
@@ -1,8 +1,8 @@
 [[انځور:Ghamkhor.jpg|thumb|289px|حبيب الله غمخور]]
-ښاغلی '''حبيب  الله غمخور'''  د ۱۹۵۶ ز کال د جون د مياشتې پر 15مه نېټه د ارزګان ولايت د ترينکوټ په ښار کې نړۍ ته سترګي روڼي کړي دي . 
+ښاغلی '''حبيب  الله غمخور'''  د ۱۹۵۶ ز کال د جون د مياشتې پر 15مه نېټه [[د ارزګان ولايت]] د [[ترينکوټ]] په ښار کې نړۍ ته سترګي روڼې کړي دي . 
  
 == زده کړې ==
-په ۱۹۶۳ ز کال د [[ترينکوټ]] د سيدال خان په  لېسه کې شامل او په ۱۹۷۵ ز کال کې یې پايته ورسوه .  د کانکور د ازمويني نه وروسته په ۱۹۷۶ ز کال د کندهار عالي دارالمعلمين کې شامل شو،لومړۍ صنف  يې چې ورته ۱۳  صنف هم وایي له امتحانه وروسته خلاص کړ  او ۱۴ صنف ته کامياب شو .  په ۱۹۷۸ ز کال داپريل په ۲۷ نيټه دافغانستان دخلق دموکراتيک گوند دولتې واک ترلاسه کړ ، ده په همدغه کال دسپتمبر په مياشت کې د تاريخ په رشته کښې د لوړو زدکړو لپاره د پخواني شوروي اتحاد ته ولېږدول شو.  په ۱۹۸۵ ز کال د تاريخ په رشته کې د ورونژ  له دولتي پوهنتون څخه د ماسټرۍ د ډيپلوم دترلاسه کولو وروسته وطن ته راستون شو .
+په ۱۹۶۳ ز کال د [[ترينکوټ]] [[د سيدال خان لېسه]] کې شامل او په ۱۹۷۵ ز کال کې یې پايته ورسوه .  د کانکور د ازمويني نه وروسته په ۱۹۷۶ ز کال [[د کندهار عالي دارالمعلمين]] کې شامل شو، لومړۍ صنف  يې چې ورته ۱۳  صنف هم وایي له امتحانه وروسته خلاص کړ او ۱۴ صنف ته کامياب شو.  په ۱۹۷۸ ز کال داپريل په ۲۷ نيټه د افغانستان د خلق دموکراتيک گوند دولتې واک ترلاسه کړ، ده په همدغه کال دسپتمبر په مياشت کې د تاريخ په رشته کښې د لوړو زدکړو لپاره د پخواني شوروي اتحاد ته ولېږدول شو.  په ۱۹۸۵ ز کال د تاريخ په رشته کې د ورونژ  له دولتي پوهنتون څخه د ماسټرۍ د ډيپلوم دترلاسه کولو وروسته وطن ته راستون شو .
 
 == دندې ==
 د قومونو او قبايلو چارو په وزارت کې لومړی د مدير بيا د کوچيانو د رياست د معاون او وروسته د ۱۹۸۶ ز کال څخه تر ۱۹۹۲ ز کال پورې یې  د کوچانو د رياست درئيس  دنده په غاړه درلوده .  
@@ -11,11 +11,11 @@
 
 د ۱۹۹۷  زکال ددسمبر د مياشتې په ورستيو ورځو کې [[سويډن]] ته ورسید.  
 
-د ۱۹۹۷ زکال راپه دې خوا د سويډن د مالمو په ښار کې اوسيږي .  داڅوکاله کيږې  چې په اروپايي هېوادو کې د افغاني کلتوري ټولنو سره په ګډه د [[افغانستان]] د کلتور د ژوندي ساتلو، غښتلتيا او افغان جګړې ځپلي ولس د حقوقو څخه د ملاتړ په خاطر په فرهنګي او سياسي هلو ځلو کې  فعاله ونډه اخلي .  ګڼې  مقالې یې ليکلي چې په سويډن  کې د(( پيوستون )) (( نوې هيلې ))، د [[ايران]] - سويډن گډه خپروني  « مانا»، « اواي زن ايران »، ((کيوان افغان )) افغاني نشريه په امريکا کې، ([[افغان رساله]]) چې له کاناډانه خپرېږې اودافغانانوپه مټ دجوړوشوو و يب پاڼولخوا خپرېږي . 
+د ۱۹۹۷ زکال را په دې خوا د سويډن د [[مالمو]] په ښار کې اوسيږي .  دا څو کاله کيږې  چې په اروپايي هېوادو کې د افغاني کلتوري ټولنو سره په ګډه د [[افغانستان]] د کلتور د ژوندي ساتلو، غښتلتيا او افغان جګړې ځپلي ولس د حقوقو څخه د ملاتړ په خاطر په فرهنګي او سياسي هلو ځلو کې  فعاله ونډه اخلي .  ګڼې  مقالې یې ليکلي چې په سويډن  کې د(( پيوستون )) (( نوې هيلې ))، د [[ايران]] - سويډن گډه خپروني  « مانا»، « اواي زن ايران »، ((کيوان افغان)) افغاني نشريه په امريکا کې، ([[افغان رساله]]) چې له کاناډانه خپرېږې اودافغانانوپه مټ دجوړوشوو و يب پاڼولخوا خپرېږي . 
 
 لومړنۍ ليکنې یې په پخواني شوروي اتحاد کې د اقتصادي ستونزو له امله په روسي ژبه پيل کړې چې د هغه ښار د ((کمونار)) او ((ملدوی کمون)) په ورځپاڼو ، د سولې او سوسياليزم په مجله کې چاپ شويدي .
 
-په افغانستان کې یې د خدای بخښلي امين افغانپور د هېواد د وتلي ژورنالست او ليکوال په هڅو د (هېواد) ورځپانې او ((جرګې)) مجلې کې ځينې مقالې خپري شوي دي .
+په افغانستان کې یې د خدای بخښلي [[امين افغانپور]] د هېواد د وتلي ژورنالست او ليکوال په هڅو د (هېواد) ورځپانې او ((جرګې)) مجلې کې ځينې مقالې خپري شوي دي .
 
 == فرهنګي کارونه ==
 په سويډن کې دافغانانو دعلمی او فرهنگي مرکز او دوستۍ دفرهنگې ټولني رئيس په توگه دنده پر مخ بيا يي.   په سويډن کې یې د ايران دعلمي او فرهنگي ټولني دمشرتابه جرگې غړيتوب درلود .  په سويډن کې د افغانانو د علمي او فرهنګي مرکز لخواد خپريدونکې خپروني (( نوې هيله )) چې د ۲۰۰۱ ز کال راپدې خوا په دو مياشتوکې يو ځل خپريږي  مسوول مدير دی .  په سويډن کې یې د فرهنګي چوپړونوڅخه دبېلګې په ډول دغه لاندني  يادونې وړ دي:
