--- a/ميانمار.mw
+++ b/ميانمار.mw
@@ -278,6 +278,7 @@ Traditional [[Music of Myanmar|Burmese music]] is [[melody|melodious]] but witho
 [[got:𐌼𐌾𐌰𐌽𐌼𐌰𐍂]]
 [[gv:Myanmar]]
 [[hak:Mién-thien]]
+[[haw:Puruma]]
 [[he:מיאנמר]]
 [[hi:म्यान्मार]]
 [[hr:Mjanma]]
