--- a/عبدالوهاب_سرتېر.mw
+++ b/عبدالوهاب_سرتېر.mw
@@ -24,8 +24,8 @@
 ''پښتو'' 
 
 
-----
-''وايي اغيار چې د غضب ژبه ده 
+
+[[''وايي اغيار چې د غضب ژبه ده 
 ګرانه پښتو چې د ادب ژبه ده 
 ماته د امن ملايکه ښکاري
 د انساني غوره مذهب ژبه ده 
@@ -40,6 +40,6 @@
 زه يې د ټولو ژبو مور ګڼمه
 هم د عجم هم د عرب ژبه ده 
 پښتو غيرت ، خدای غيرتي سرتېره
-په دې دليل وايم  د رب ژبه ده''
+په دې دليل وايم  د رب ژبه ده'']]
 
 [[وېشنيزه: پښتانه شاعران]]
