--- a/عبدالوهاب_سرتېر.mw
+++ b/عبدالوهاب_سرتېر.mw
@@ -25,21 +25,36 @@
 
 
 
-[[''وايي اغيار چې د غضب ژبه ده 
+''وايي اغيار چې د غضب ژبه ده 
+
 ګرانه پښتو چې د ادب ژبه ده 
+
 ماته د امن ملايکه ښکاري
-د انساني غوره مذهب ژبه ده 
+
+د انساني غوره مذهب ژبه ده
+ 
 اوس يې بلبلې په باغو کې وايي
-د ترنم او د طرب ژبه ده 
+
+د ترنم او د طرب ژبه ده
+ 
 پخوا د پوهې په نصاب کې نه وه
-نن د پوهنې او مکتب ژبه ده 
+
+نن د پوهنې او مکتب ژبه ده
+ 
 ددې هيواد د تاريخي وګړو
-د لوی ټبر او لوی نصب ژبه ده 
+
+د لوی ټبر او لوی نصب ژبه ده
+ 
 اغيار دې ښه پوه شي چې مرګ نه لري
+
 دا د غرغښت دا د شنسب ژبه ده 
+
 زه يې د ټولو ژبو مور ګڼمه
-هم د عجم هم د عرب ژبه ده 
+
+هم د عجم هم د عرب ژبه ده
+ 
 پښتو غيرت ، خدای غيرتي سرتېره
-په دې دليل وايم  د رب ژبه ده'']]
+
+په دې دليل وايم  د رب ژبه ده''
 
 [[وېشنيزه: پښتانه شاعران]]
