--- a/جلالکوټ.mw
+++ b/جلالکوټ.mw
@@ -34,8 +34,8 @@
 
 ==بهرنې تړون ==
 {{Commonscat|Jalalabad|جلالکوټ}}
-*[http://www.zharov.com/dupree/chapter11.html Historical Guide To Afghanistan - Jalalabad]
-*[http://www.flickr.com/photos/kimberlytherese/421677505/in/set-72157594578147607/ Images of Jalalabad|  د جلالکوټ انځورونه]
+*[http://www.zharov.com/dupree/chapter11.html د افغانستان تاریخي لارښود - جلالکوټ]
+*[http://www.flickr.com/photos/kimberlytherese/421677505/in/set-72157594578147607/ د جلالکوټ انځورونه|  د جلالکوټ انځورونه]
 
 {{د افغانستان لوی ښارونه}}
 
