--- a/جلالکوټ.mw
+++ b/جلالکوټ.mw
@@ -16,7 +16,9 @@
 د افغانستان خپلواکۍ ګټلو څخه وروسته لومړنۍ لویه جرګه په ۱۳۰۱ل، چې له ۱۹۲۰ز کال سره سمون خوري، په همدې ښار کې جوړه شوه. 
 
 
-[[Seraj-ul-Emarat]], the residence of Amir [[Habibullah Khan|Habibullah]] and King [[Amanullah Shah|Amanullah]] was destroyed in [[1929]]; the other sanctuaries however, retain vestiges of the past and offer a peaceful afternoon's crunch. The [[mausoleum]] of both rulers is enclosed by a garden facing Seraj-ul-Emart.
+سراج العمارت د [[امیر حبیب الله خان]] او [[امیر امان الله خان]] د اوسېدا ځای په [[۱۹۲۹ز]] کال رنګ او وسوزول شو. بل د یادولو وړ بڼ چې ددې امیرانو کورنۍ پورې اړه لري د امیر شهید بڼ دی. دا بڼ د نوموړو امیرانو پلرنۍ هدیره هم ګڼلې شو، ځکه چې پدې بڼ کې د [[امیر امان الله خان]]،[[امیر حبیب الله خان]]، [[سردار نصر الله خان]]، د امان الله خان ماندینه، خور یې نجیبه سراج هم پدې هدیره کې په ابدي خوب ویده دی.
+
+د یادولو وړه د، چې د افغان جهاد قومندان او پښتون مین مشر [[حاجي عبد القدیر]] هم په دې هدیره کې خاورو ته سپارل شوې دی.
 
 == Trivia ==
 * Jalalabad is featured as a map on the [[PC game]] [[Battlefield 2]] as "Road to Jalalabad".
