--- a/گندهارا.mw
+++ b/گندهارا.mw
@@ -15,8 +15,10 @@
 
 ==جغرافیه==
 
-[[Image:GandharaFemale.JPG|thumb|150px|Female spouted figure, terracotta, Charsadda, Gandhara, 3rd-1st century BC [[Victoria and Albert Museum]]]]
-The Gandhāri people were settled since the [[Vedic civilization|Vedic]] times on the banks of Kabul River (river Kubhā or Kabol) up to its mouth into the [[Indus River|Indus]]. Later Gandhāra included parts of north-west [[Punjab region|Punjab]] of india. Gandhara was located on the ''northern trunk road'' ([[Uttarapatha]]) and was a centre of international commercial activities. It was an important channel of communication with ancient [[Iran]] and [[Central Asia]]. 
+افغانان د ویدي پیر څخه مخکې هم د کابل سیند (کوبا یا کابول) پر غاړه تر اباسینده پورې ودان ول. وروسته بیا د هندي پنجاب شمالي اترا پردیېش ایالت ځینې برخې هم په ګندهارا کې ورګډې شوی، او پدې توګه ګندهارا د یو نړویال سوداګریزو چارو منځۍ وګرځېد. دا وخت ګندهارا د پارس او منځني اسیا ترمنځ د یو مهم اړیکتایي چېنل په توګه مخې ته راغې.
+
+د ګندهارا بریدونه (سرحدونه) د وخت په تېرېدو سره ادلون بدلون موندلې. کله به د پېښور او ټېکسلا ښارونه به په ټولیز ډول د ګندهارا د ټاټوبي په نامه یادېدل، کله به د سوات دره (سانسکرېت سوَستُو) هم پدې ستر لرغوني مدنیت کې راشامله شوه.
+
 
 The boundaries of Gandhara varied throughout history. Sometimes the Peshawar valley and Taxila were collectively referred to as Gandhara and sometimes the [[Swat (Pakistan)|Swat valley]] ''(Sanskrit: Suvāstu)'' was also included. The heart of Gandhara however was always the Peshawar valley. The kingdom was ruled from capitals at Pushkalavati (Charsadda), Taxila, Purushapura (Peshawar) and in its final days from Udabhandapura (Hund) on the Indus. According to the Puranas, they have been named{{Clarifyme|date=March 2008}} after Taksha and Pushkara, the two sons of [[Bharata]], a king  of [[Ayodhya]].
 
