--- a/گندهارا.mw
+++ b/گندهارا.mw
@@ -19,8 +19,7 @@
 
 د ګندهارا بریدونه (سرحدونه) د وخت په تېرېدو سره ادلون بدلون موندلې. کله به د پېښور او ټېکسلا ښارونه به په ټولیز ډول د ګندهارا د ټاټوبي په نامه یادېدل، کله به د سوات دره (سانسکرېت سوَستُو) هم پدې ستر لرغوني مدنیت کې راشامله شوه.
 
-
-The boundaries of Gandhara varied throughout history. Sometimes the Peshawar valley and Taxila were collectively referred to as Gandhara and sometimes the [[Swat (Pakistan)|Swat valley]] ''(Sanskrit: Suvāstu)'' was also included. The heart of Gandhara however was always the Peshawar valley. The kingdom was ruled from capitals at Pushkalavati (Charsadda), Taxila, Purushapura (Peshawar) and in its final days from Udabhandapura (Hund) on the Indus. According to the Puranas, they have been named{{Clarifyme|date=March 2008}} after Taksha and Pushkara, the two sons of [[Bharata]], a king  of [[Ayodhya]].
+The heart of Gandhara however was always the Peshawar valley. The kingdom was ruled from capitals at Pushkalavati (Charsadda), Taxila, Purushapura (Peshawar) and in its final days from Udabhandapura (Hund) on the Indus. According to the Puranas, they have been named{{Clarifyme|date=March 2008}} after Taksha and Pushkara, the two sons of [[Bharata]], a king  of [[Ayodhya]].
 
 ==لرغونې ګندهارا==
 ===مخ تاريخي پېر===
