--- a/گندهارا.mw
+++ b/گندهارا.mw
@@ -15,7 +15,7 @@
 
 ==جغرافیه==
 
-افغانان د ویدي پیر څخه مخکې هم د کابل سیند (کوبا یا کابول) پر غاړه تر اباسینده پورې ودان ول. وروسته بیا د هندي پنجاب شمالي اترا پردیېش ایالت ځینې برخې هم په ګندهارا کې ورګډې شوی، او پدې توګه ګندهارا د یو نړویال سوداګریزو چارو منځۍ وګرځېد. دا وخت ګندهارا د پارس او منځني اسیا ترمنځ د یو مهم اړیکتایي چېنل په توګه مخې ته راغې.
+افغانان د ویدي پیر څخه مخکې هم د کابل سیند (کوبا یا کابول) پر غاړه تر اباسینده پورې ودان ول. وروسته بیا د هندي پنجاب شمالي [[اترپردیېش]] ایالت ځینې برخې هم په ګندهارا کې ورګډې شوی، او پدې توګه ګندهارا د یو نړویال سوداګریزو چارو منځۍ وګرځېد. دا وخت ګندهارا د پارس او منځني اسیا ترمنځ د یو مهم اړیکتایي چېنل په توګه مخې ته راغې.
 
 د ګندهارا بریدونه (سرحدونه) د وخت په تېرېدو سره ادلون بدلون موندلې. کله به د پېښور او ټېکسلا ښارونه به په ټولیز ډول د ګندهارا د ټاټوبي په نامه یادېدل، کله به د سوات دره (سانسکرېت سوَستُو) هم پدې ستر لرغوني مدنیت کې راشامله شوه.
 
