--- a/جلالکوټ.mw
+++ b/جلالکوټ.mw
@@ -3,7 +3,7 @@
 :''د آزربایجان ښار لپاره, وګورئ [[جلیل اباد]].''
 
 
-جلالکوټ (جلال اباد)د کنړ او کابل سیند په نښلونې څای کې پروت دی. جلالکوټ د ننګرهار ولایت منڅي (مرکز) دی. دا ښار د یوې۹۰ کیلومتري لوی لاری په واسطه له کابل ښار سره نښلي. او د په همدې واټن سره په ختیځه برخه کې د ګاونډي هېواد له پېښورښار سره نښلي.
+جلالکوټ (جلال اباد)د کنړ او کابل سیند په نښلونې  ځای کې پروت دی. جلالکوټ د ننګرهار ولایت منځۍ (مرکز) دی. دا ښار د یوې۹۰ کیلومتري لوی لاری په وسیله له کابل ښار سره نښلي. او د په همدې واټن سره په ختیځه برخه کې د ګاونډي هېواد له پېښورښار سره نښلي.
 
 دا رنګه جلالکوټ د ختیځو سیمو ستر سوداګریز او ټولنیز منځۍ هم دی. 
 
