--- a/ابن_رشد.mw
+++ b/ابن_رشد.mw
@@ -2,7 +2,8 @@
 محمد بن احمد بن رشد اندلسی چې ۱۱۱۲هجری سپوږمیز کال په ننۍ اسپانیا کې زېږېدلې دی. او په ۱۹۸هجری سپوږمیز کال مړ شوې. 
 
 ==زده کړې==
-ابن رشد خپلې زده کړې د حقوق او رنڅپوهنې په ځانګو کې ترسره کړې. او د ډېرې مودې لپاره د [[سویل]] او [[کوردوبا\قرتبه]] په ښارونو کې پاتې شوې دی. 
+علامه ابن رشد د خپل پیر په ټولو علومو لاسبری وو. په رنځپوهنه کې د جالینوس ټول علم ده خپل کړې وو. دده فلسفه د ارستو د فلسفې شننه او لنډیز دواړه وو. دده ستورپوهنه له مجسطي څخه ترلاسه کړې وه. فقه یې د مالکي مسلک فقه وه، چې دده د هم پيرو(هم عصرو)  څخه وو.  پدې توګه ده داسې کوم نوی علم منځته ندې راوړی، او نه یې د کوم نوي  شي بنست اېښې دی. البته دې په خپلو هم پيرو کې د تنقیدي قوت له لامله ډېر ستر  ځای درلود، چې دده مثال نه د هغه په پیر کې لیدل کېده، او نه هم له هغې څخه وروسته پیدا شوې. ددې کار ښکارندوي د ابن رشد لخوا د بطلیموس د ستورپوهنې نقد دی. 
+لدې څخه پرته هم ابن  رشد د داسې بنسټونو او اصولو بنستیز افکار هم لیدل کېږي، چې د دارنګه لوړو افکارو پنځونه له غښتلي عقلونو څخه شونې ده او بس. (وګورﺉ، د ارستو مابعد الطبیعاتو د مقالاتو تلخیص،لومړی قسم، ۱۳مه برخه)
 
 ==دندې==
 ابن رشد د قضا په سپېڅلې دنده هم د ډېېرې مودې لپاره پاتې شوې.ابن رشد
