/* له مړينې وروسته اغیزې */

--- a/ابن_رشد.mw
+++ b/ابن_رشد.mw
@@ -12,6 +12,8 @@
 ابن رشد یوه سنی مسلمان او  مالکی مذهبه و خو دخپل د فلسفی عقایدو په جرم د دینی عالمانو له خوا په کفر با ندی تورن سوی و. د اروپای او عیسوی  مذهبی عالمانو (پاپانو) له خوا هم په کفر تورن سوی و. په غربی هیوادنو کی  د هغوی فلسفه  د  ( ابن رشدیسم ) او یا ( اوروئسیسم ) په نامه  نو میالی سوی دی . هغه کوشش کوله چی د ارسطویی فلسفه پر اسلام با ندی تطبیق کری . خو هغه خپله د قران شریف  په باب ځانگړی فکرونه در لو ده چی د هغوی د (فصل المقال )په کتاب کی را غلی دی .  ځنی کسان وایی چه د اسلام له نظره دغه یوه کفر کونکی کتاب دی . 
 په هره توگه  ابن رشد په نړیوال کچه کی یوه  نامتو او مشهور فیلسوف دی . د جرمنی مشهور لیکوال (دانته) په  خپل نومیالی کتاب کی چی د ( الهی کمدی ) په نا مه مشهور دی ابن رشد نه په ډېره درناوی سره یا دونه کړی دی . او همدا رنگه د غربی هیوا دونو نومیالی نقاشان د هغوی لرغونی  انځورونه جوړرکړی دی . چی دوه  انځورونه یی  هم دلته راوستل سوی دی . سربیره پر دا د هغوی د ژوند په باب ډېر کتا بونه او ناولی لیکل سوی دی او شاهین یوسف د هغوی د ژوند سینمایی فیلم هم جوړرکړی دی . په 8318 عیسوی کال کی  په اسمان کی یوه کوچنی سیاره هم د دوی په نوم باندی  نوماند سو . ( مهندس داود عطایی قندهاری )
 
+==د ابن رشد فلسفي تګلاره==
+
 == له مړينې وروسته اغیزې ==
 [[انځور:Averroes closeup.jpg|thumb|فرسک [[د آتن ښوونځې]] د [[رافائل]] اثر، د انځور هغه برخه چې ابن رشد پكې شتون لري]]
 *د ابن رشد مجسمه تر نن ورځې پورې د اسپانيا په كرتبې (قرتبه)‌ ښار كې شته.
