/* د ابن رشد فلسفي تګلاره */

--- a/ابن_رشد.mw
+++ b/ابن_رشد.mw
@@ -13,6 +13,8 @@
 په هره توگه  ابن رشد په نړیوال کچه کی یوه  نامتو او مشهور فیلسوف دی . د جرمنی مشهور لیکوال (دانته) په  خپل نومیالی کتاب کی چی د ( الهی کمدی ) په نا مه مشهور دی ابن رشد نه په ډېره درناوی سره یا دونه کړی دی . او همدا رنگه د غربی هیوا دونو نومیالی نقاشان د هغوی لرغونی  انځورونه جوړرکړی دی . چی دوه  انځورونه یی  هم دلته راوستل سوی دی . سربیره پر دا د هغوی د ژوند په باب ډېر کتا بونه او ناولی لیکل سوی دی او شاهین یوسف د هغوی د ژوند سینمایی فیلم هم جوړرکړی دی . په 8318 عیسوی کال کی  په اسمان کی یوه کوچنی سیاره هم د دوی په نوم باندی  نوماند سو . ( مهندس داود عطایی قندهاری )
 
 ==د ابن رشد فلسفي تګلاره==
+د ابن رشد په فلسفه کې په عمومي توګه دده له اسلافو او هم پیرو عرب فیلسوفانو تعلیمات لیدل کېږي. مګر یواځې دا اغیزې ندي، چې دده په فکري اړخ یې اغیزمن کړې، لکن د ارستو د فلسفې اغیز هم نشو ردولای، البته په دې افکارو کې یې د نوي اپلاتوي نظریاتو زیاتونه کړې. 
+د عرب فیلسوفانو دا ځانګړتیا ده، چې دوي د ارستو په ښوونو کې د (عقول دوایر)یا کرویات ور زیات کړي، چې د عالم او لومړي متحرک ترمنځ لیدل کېږي، او د (انبثاق) نظریه یې هم عامه کړې ده. لدې خبرې څخه ددوي موخه دا وه، چې ټول کایناتو صدور د څښټن ذات دی، او ددې نظریې شننه یې داسې کړې، چې لومړې محرک د خوځښت اتصال لومړي ځل لپاره له ټولو نږدې کُری څخه کېږي. لدې څخه وروسته هغې ته نږدې کُرې څخه، په همدې توګه په تدریجي توګه عالم ارضي سره د هغې اړیکې...
 
 == له مړينې وروسته اغیزې ==
 [[انځور:Averroes closeup.jpg|thumb|فرسک [[د آتن ښوونځې]] د [[رافائل]] اثر، د انځور هغه برخه چې ابن رشد پكې شتون لري]]
