robot  Adding: [[ug:Braziliye]]

--- a/برازیل.mw
+++ b/برازیل.mw
@@ -565,6 +565,7 @@ Some fight sports with Brazilian origins have become popular around the world:
 [[tk:Braziliýa]]
 [[tl:Brasil]]
 [[tr:Brezilya]]
+[[ug:Braziliye]]
 [[uk:Бразилія]]
 [[ur:برازیل]]
 [[uz:Braziliya]]
