*Empty MediaWiki Message*

--- a/نړيواله_جنايي_محکمه.mw
+++ b/نړيواله_جنايي_محکمه.mw
@@ -1,3 +1,4 @@
+{{صاف}}
 د هاګ نړيواله محكمه د ملګرو ملتونو قضايي ارګان دی،  چې په  ۱۹۵۴/۷/ ۲۶ مه نېټه د يو تړون له مخې د ملګرو ملتو د موخو لپاره يې بنسټ كيښودل شو. محكمه د ملګرو ملتونو ټول تړونونه د خپل ارګان يوه نه جلا كيدونكې برخه ګڼي خو كړنلاره يې د خپلو ځانګړو اصولو په رڼا  كې ده طرحه شوې . د هاګ محکمې د هغې محکمې ځای ونیوه ، چې په ۱۹۲۰ ز کې منځ ته راغلې وه . د هاګ نړیوالې محکمې په ۱۹۴۶ز کې خپل کار پیل کړ .
 
 د هاګ محکمه د ملګرو ملتونوله هغو شپږو ارګانونو ځنې يوازېنی  ارګان دی ، چې  له نيويارك څخه بهر د هالنډد هاګ په ښار کې مېشت دی .  هاګ  يوه مد ني محكمه ده چې د دولتونو تر منځ د شخړو د هواري لپاره کارکوي او ملګروملتونو موسسې ته قانونې مشوري وركوي، خوله جنايي قضيو سره هيڅ کار نه لري او د افرادو تر منځ د شخړوڅېړل هم خپله دنده نه بولي . د داسې قضيو لپاره دولتي محكمې يا د ملګروملتونو نورې ځانګړې  محكمې شته ، چي د حل لارې چاري ورته لټوي لكه د يوګوسلاويا او رواندا لپاره د جنايتونو نړيواله محكمه.
