*Empty MediaWiki Message*

--- a/محمد_حامد_حليمي.mw
+++ b/محمد_حامد_حليمي.mw
@@ -1,7 +1,16 @@
 څيړونکي مرستيال محمد حامد حليمي د مبارک شاه خان حليمي زوي د 1360 هجري لمريز کال دسلواغي په مياشت کې دکابل په ښار کې زيږيدلي دي .پلارني ټاټوبي يې دوردګو ولايت دسيد آباد ولسوالي دحسن بيک کلي دي .لومړني او ثانوي زدکړي يې دحضرت ابراهيم خليل الله په عالي ليسې کې بشپړي کړي او په کال  1377 کې له نوموړي ليسې څخه په په اعلي درجه فارغ شوي او دهمدغه کال دکانکور دآزمويني له لاري دکابل پوهنتون دفارمسي پوهنځي ته بريالي شو ، په کال 1381 کال کې يې له نوموړي پوهنځي څخه دلسانس ديپلوم تر لاس کړ. د 1383 کال د لړم دمياشتي په دولسمه نيټه يې دکدري آزمويني له بشپړولو څخه وروسته يې دافغانستان دعلومو اکاډمي دعلمي غړي توب وياړ تر لاسه کړ. نوموړي په پښتو،دري او انګريزي ژبو پوهيږي . تر اوس مهال يې په لس ګونو علمي څيړنيزي مقالي مطالب او شعرونه دهيواد دمطبوعاتو او بیلابیلو انترنیتی ویب پاڼو له لارې خپاره شوي دي .
-آثار
+
+== آثار ==
 د بنسټيزو درملو څيړنه 1385 چاپ
+
 دنسخې ليکني لاري چاري  
+
 له اغرو څخه غاټول دشعرونو مجموعه تر چاپ لاندي 
+
 وردګ 
+
 دګناه پیژندنه
+
+
+[[وېشنيزه:پښتانه ليکوالان]]
+[[وېشنيزه:پښتانه شاعران]]
