*Empty MediaWiki Message*

--- a/حبيب_قادري.mw
+++ b/حبيب_قادري.mw
@@ -1,3 +1,4 @@
+{{صاف}}
 د حبيب ترټولو غوره هيله دا ده ،چې افغاني موسيقي په يوه داسې بڼه واوړي، چې د نوي توكم لپاره زړه راښكونې او له ورځنيو هنري پرمختياوو سره سياله او همغاړې واوسي.
 د حبيب قادري نوم له سخت كار، زيار او پرله پسې هڅو سره يوځاى راځي. دغه زيار او پرله پسې هڅو نوموړى د نړيوال شهرت او نړيوالو برياليتوبونو تر پوړيو ورساوه. له تېرو لسو كلونو راسې د حبيب ښكلو، عشقي، تخيلي او صوقيانه سندرو خواره واره افغانان دې ته اړ اېستي، چې د حبيب سندرو او هنر ته خپلې غېږې پرانيزي.هغه په خپل هنري بهير كې ديوه بريمن هنرمند په څېره راڅرګند شو او له استاد مهوش، فيض قادري، ليلا فروهر( اېرانۍ)، شهره او نورو نوموتو سندرغاړو سره يې پريوه سټېج دهنر او سندرو اظهار وكړ.
 حبيب د خپل هنر او سندريزو حركاتو له امله دومره مشهور، او پر زړونو ته پرېوت ، چې په كنسرتونو او سندريزو محفلونو كې يې له سندرو او غزلو سره د خلكو په زړونو كې د نڅاوو مينه او ذوق راټوكيږي.
