/* منابع حکمت اشراق */

--- a/د_اشراق_فلسفه.mw
+++ b/د_اشراق_فلسفه.mw
@@ -13,11 +13,12 @@
 حکمت العتیقه یعنی حکمت قدیم همواره بوده و در قدیم هندیها و ایرانیها و بابلیها و مصریها و بعد از آن یونانیها برخوردار بوده اند.
 اما حکمت لدنی خاصان از آن برخوردار می شوند. اما در آغاز این دو حکمت از یک مبدا سرچشمه می گرفته و آن ادریس بوده که نام دیگر آن هرمس است.بعد از اینکه مردم حکمت از ادریس آموختند به عقیده او به دو شاخه شد که یکی به سمت ایران ودیگری به‌طرف مصر و بعد این دو شاخه وارد اسلام گردید.<ref>کتاب ملاصدرا تالیف هانری کربن</ref>
 
-== منابع حکمت اشراق==
-=== عرفان و تصوف ===
-یکی از وجوه اساسی تمایز حکمت اشراق از حکمت مشاء رابطه ماهوی آن با نور و مسایل و حقایق عرفانی است . ذوالنون مصری , سهل بن عبد الله تستری , ابو یزید بسطامی , حسین بن منصور حلاج و ابوسعید ابی الخیر از جمله عارفانی هستند که سهروردی از آنها تأثیر پذیرفته‌است.
+== د اشراق د فلسفې سرچینې==
+=== تصوف و عرفان ===
+د اشراقي فلسفې له بنسټیزه سرچینو څخه همدا تصوف ګڼلای شو. همدا تصوف دی، چې د اشراق تګلاره یې له مشايي فلسفي تګلارې څخه بېله کړې ده. ذوالنون مصری , سهل بن عبد الله تستری , ابو یزید بسطامی , حسین بن منصور حلاج او ابوسعید ابی الخیر هغه صوفیان دي، چې سهروردي له دوي څخه اغیزمن شوې.
 === قرآن و حدیث ===
-در رسایل [[سهروردی]] ، عقل در مقابل وحی نیست بلکه درطول وحی است. حملات غزالی بر فلسفه مشاء در کتابهای ((تهافت الفلاسفه)) و ((المنقذ من الضلال)) ضرباتی کاری بر پیکره جریان فلسفی در جهان اسلام وارد کرد.یکی از آثار این حملات ایجاد بدبینی و ذهنیت منفی فزاینده نسبت به فلسفه در میان دینداران بود زیرا بسیاری از آنان فلسفه را اندیشه و تفکری بیگانه می‌دانستند . این نگرش زمانی تقویت می‌شد که با مراجعه به آثار فلسفی مشائی در آن زمان , در آنها اثر چندانی از آیات قرآن و حدیث که دو منبع اساسی معرفت دینی هستند نمی‌دیدند. با توجه به این مسئله , سهروردی برای حمایت از فلسفه , رسالتی را آغاز کرد که طی آن کوشید تا میان فلسفه و عرفان و قرآن تا سر حد توان هماهنگی ایجاد کند و اگر پس از وی صدر المتالهین سخن از ((اتحاد قرآن و عرفان و برهان)) به میان می‌آورد , به واقع می‌توان طراح و معمار اصلی این اندیشه را شیخ اشراق دانست.
+
+د [[سهروردی]] په رسايلو کې، عقل د وحی په مقابل کې ندی. حملات غزالی بر فلسفه مشاء در کتابهای ((تهافت الفلاسفه)) و ((المنقذ من الضلال)) ضرباتی کاری بر پیکره جریان فلسفی در جهان اسلام وارد کرد.یکی از آثار این حملات ایجاد بدبینی و ذهنیت منفی فزاینده نسبت به فلسفه در میان دینداران بود زیرا بسیاری از آنان فلسفه را اندیشه و تفکری بیگانه می‌دانستند . این نگرش زمانی تقویت می‌شد که با مراجعه به آثار فلسفی مشائی در آن زمان , در آنها اثر چندانی از آیات قرآن و حدیث که دو منبع اساسی معرفت دینی هستند نمی‌دیدند. با توجه به این مسئله , سهروردی برای حمایت از فلسفه , رسالتی را آغاز کرد که طی آن کوشید تا میان فلسفه و عرفان و قرآن تا سر حد توان هماهنگی ایجاد کند و اگر پس از وی صدر المتالهین سخن از ((اتحاد قرآن و عرفان و برهان)) به میان می‌آورد , به واقع می‌توان طراح و معمار اصلی این اندیشه را شیخ اشراق دانست.
 
 به گفته محقق بزرگ فرانسوی علامه نیکلسون , آیات قرآنی مانند «الله نور السموات و الارض» از منابعی است که تأثیر ویژه در فلسفه و عرفان داشته‌است. بدون شک سهروردی در بحث نورشناسی که محوری ترین بحث فلسفه اوست از آیات سوره نور تأثیر پذیرفته‌است :
 ((«و اشرقت الارض بنور ربها» هر چه زنده‌است بذات خویش , مجرد است و هر نور مجردی زنده‌است بذات خود ؛ و حق اول نورالانوار است زیرا که خود اعطا کننده حیات و بخشنده نور است. ظاهر است به ذات خود و نمودار کننده و آفریننده جهان وجود است که فرمود : «الله نور السموات و الارض» نوریت همه انوار ساریه فیض نور اوست)) 
@@ -26,14 +27,8 @@
 سهروردی با استناد به آیه شریفه «الحق من ربک» حقیقت را امری واحد شمرده و آن را منسوب به خداوندی واحد می‌داند: ((حقیقت ، خورشید واحدی است که به جهت کثرت مظاهرش تکثر نمی‌یابد. شهر واحدی است که باب‌های کثیری دارد و راههای فراوان به آن منتهی است))
 شیخ شهید در اثبات تجرد نفس به آیات قرآن استناد می‌کند : ((و الدلیل علی انه لیس فی عالم الاجسام و لیس بجسم و لا جسمانی من الکتاب و السنه و الاثر ؛ و اما الایات : «فی مقعد صدق عند ملیک مقتدر» و هذا یدل علی انه لیس بجسم و لا جسمانی , اذ لا یتصور فی حق الاجسام هذه الصفات ...))
 
-=== حکمت الهی یونان ===
-سهرودی بر خلاف فیلسوفان پیشین که تنها به ارسطو توجه ویژه‌ای داشتند شیفته فیثاغورث و امپدکلوس و به ویژه افلاطون بود ، تا حدی که افلاطون را پیشوای حکمای اشراق می‌داند.
-
-=== حکمت مشاء ===
-بدون شک این حکمت مشائی بود که مقدمهٔ اشراق شده‌است. سهروردی با گردآوری آثار مشائین به خصوص ابن سینا توانست اینگونه از آرا مشاء را در حکمت اشراق استفاده کند.
-
-=== حکمت ایران باستان ===
-شیخ اشراق دلبستگی خاصی به حکمای فارس از قبیل جاماسف (جاماسب) , فرشاوشتر, زردشت و بوذرجمهر داشته‌است. در رساله کلمه التصوف , خود را احیاگر اندیشه نوری حکمای فارس می‌شمارد : ((و کانت فی الفرس «امه یهدون بالحق و به یعدلون» حکماء فضلاء غیر مشبه بالمجوس قد احیینا حکمتهم النوریه الشریفه ... فی الکتاب المسمی بحکمه الاشراق و ما سبقت الی مثله)) یعنی : ((در میان فارسی زبانان گروهی بودند که به حق هدایت می‌کردند و به آن عدالت می‌ورزیدند؛ حکیمان و دانشورانی که هیچ شباهتی با مجوس نداشتند . ما در کتاب حکمه الاشراق خود حکمت نوریه آن‌ها را احیا کردیم و هیچ کس همانند من چنین کاری را نکرده‌است.))
+===د یونانیانو الهي حکمت===
+سهروردي د نورو فیلسوفانو برعکس، چې هغوي به د ارستو مینان ول، دې د فیثاغورث، امپدیکلوس او په ځانګړي توګه اپلاتون، چې د اشراقي تګلارې بنسټګر ګنل کېږي، څخه سخت اغیزمن وو.
 
 ==اخځلیکونه==
 
