--- a/حميرا_بېگم.mw
+++ b/حميرا_بېگم.mw
@@ -1,4 +1,4 @@
-<font face="Tahoma">
+{{نابشپړ}}
 ملكه حميرا د افغانستان د پخواني پاچا اعليحضرت محمد ظاهرشاه مېرمن وه چې د ايټاليا په پلازمېنه روم كې يې د خپل ژوند پور پرې كړ او له دې نړۍ څخه يې سترګې پټې كړې. ملكې حميرا د خپل ژوند 84 پسرلي په دې دنيا تر شا پرېښودل. ملكې نهه اولادونه درلودل چې د شپإو يې لا د ځمكې پر سر د ژوند وربشه شته.
 
 ملكه حميرا يوه ډېره زړه سواندې مېرمن وه، دې به تل د خپل ناچارو خلكو پوښتنه كوله او ورسره به يې وړ مرسته هم كوله. هغه مهال چې ملكه په افغانستان كې وه، وخت ناوخته به روغتونونو ته تله او د ناروغږنو پوښتنه به يې كوله.
