--- a/غرزی_خواخوږی.mw
+++ b/غرزی_خواخوږی.mw
@@ -1,5 +1,8 @@
 [[انځور:Gharzai_Khwakhuzhi.jpg|thumb|غرزي خواخوږی]]
-الحاج '''غرزي خواخوږی''' د ارواښاد پوهنپال استاد [[محمد ابراهيم خواخوږى]] (شاعر، ليکوال، ژورنالست، نوميالي سياستپوه، د ويښ ځلميانو د مشرتابه غړي او د مترقي دموکرات ګوند د مشرانو څخه ؤ) زوي د کندهار ولايت اصلي اوسيدونکي او په قام بلوڅ، په (١٩٦٢ م کال) په کابل کي زيږيدلي، منځني او لوړي زده کړي يي د کابل په حبيبيي ليسي، د افسرانو عالي کورس،  د کماندو او پراشوت (ج) کورس او د حربي پوهنتون د لوژستيک د پوهنځي څخه د لسانس تردرجي پوري بشپړ کړي دي.
+الحاج '''غرزي خواخوږی''' د ارواښاد پوهنپال استاد [[محمد ابراهيم خواخوږى]] (شاعر، ليکوال، ژورنالست، نوميالي سياستپوه، د ويښ ځلميانو د مشرتابه غړي او د مترقي دموکرات ګوند د مشرانو څخه ؤ) زوي د کندهار ولايت اصلي اوسيدونکي او په قام بلوڅ، په (١٩٦٢ م کال) په کابل کي زيږيدلی.
+
+== زده کړې ==
+منځني او لوړي زده کړي يي د کابل په حبيبيي ليسي، د افسرانو عالي کورس،  د کماندو او پراشوت (ج) کورس او د حربي پوهنتون د لوژستيک د پوهنځي څخه د لسانس تردرجي پوري بشپړ کړي دي.
 
 == دندي ==
 د دفاع وزارت او د ستردرستيز  په بيلو بيلو رياستونو کي دنده تر سره کړي، د افغانستان د اطلاعاتو او کلتور د وزير سکرتر، د افغانستان د بيا رغوني او پرمختيا(RDA) په مؤسسه کي د عامو اړيکو مسؤل، په جګړو کي و کابل ته د ملګرو ملتونو (UN) د بيړنيو خوراکه موادو د رسولو د چارو مسؤل، په افغانستان کي د سولي د ټنګښت لپاره هلي ځلي، د افغانستان د اسلامي دولت د احتساب د وزارت معين، افغانستان د اسلامي دولت د ملي امنيت په چارو کي سلاکار، د طالبانو د واکمني پر ضد د پاڅون د مشري په  تور، د اسلامي لوړو ارزښتونو، د ملي منل سوي دودونو او د بشري حقوقو د اعلاميي پر خلاف ونيول سو او پرته له محاکمي څخه و اعدام ته محکوم چي پنځه کاله په ځنځير، زولانه او رنګا رنګ زورولو (کوټه قلفي، د کورني او دوستانو سره نه کتل او نور) سره د ننګرهار، کابل او کندهار په استخباراتي جيلونو کي وساتل سو.
